fix opds layout, start changes to get subtitle and abstract in to the DB
git-svn-id: file:///srv/svn/publican/trunk@1518 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/README
+++ b/publican/README
@@ -1,3 +1,11 @@
+# BUGBUG 2.2 web site changes
+
+1: rebuild home pages!
+2:
+
+ALTER TABLE main.books ADD COLUMN subtitle text;
+ALTER TABLE main.books ADD COLUMN abstract text;
+
 Common files and scripts for building Red Hat documentation.
 
 Assumptions: DocBook xml, *nix, en-US source language.
