Add bridgehead_in_toc parameter. BZ #616123
git-svn-id: file:///srv/svn/publican/trunk@1525 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/README
+++ b/publican/README
@@ -5,6 +5,7 @@
 
 ALTER TABLE main.books ADD COLUMN subtitle text;
 ALTER TABLE main.books ADD COLUMN abstract text;
+drop table settings;
 
 Common files and scripts for building Red Hat documentation.
 
