fix indexterms split in PO files
git-svn-id: file:///srv/svn/publican/trunk@1543 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/datadir/Common_Content/common/as-IN/Feedback.po
+++ b/publican/datadir/Common_Content/common/as-IN/Feedback.po
@@ -23,15 +23,11 @@ msgstr "আমাক মতামতৰ প্ৰয়োজন!"
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>feedback</primary> <secondary>contact information for this manual</secondary>"
-msgstr ""
+msgstr "<primary>মতামত</primary> <secondary>এই হাতপুথিৰ বাবে যোগাযোগৰ তথ্য</secondary>"
 
 #. Tag: para
 #, no-c-format
 msgid "You should over ride this by creating your own local Feedback.xml file."
 msgstr "আপোনাৰ নিজৰ স্থানীয় Feedback.xml নথিপত্ৰ সৃষ্টি কৰি আপুনি ইয়াৰ প্ৰভাৱ নোহোৱা কৰক ।"
 
-#~ msgid "feedback"
-#~ msgstr "মতামত"
 
-#~ msgid "contact information for this manual"
-#~ msgstr "এই হাতপুথিৰ বাবে যোগাযোগৰ তথ্য"
