--- a/publican/datadir/Common_Content/common/bg-BG/Feedback.po
+++ b/publican/datadir/Common_Content/common/bg-BG/Feedback.po
@@ -21,15 +21,11 @@ msgstr "Нуждаем се от обратна връзка!"
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>feedback</primary> <secondary>contact information for this manual</secondary>"
-msgstr ""
+msgstr "<primary>обратна връзка</primary> <secondary>информация за връзка относно този наръчник</secondary>"
 
 #. Tag: para
 #, no-c-format
 msgid "You should over ride this by creating your own local Feedback.xml file."
 msgstr "Трябва да презапишете това като създадете свой собствен Feedback.xml файл."
 
-#~ msgid "feedback"
-#~ msgstr "обратна връзка"
 
-#~ msgid "contact information for this manual"
-#~ msgstr "информация за връзка относно този наръчник"
