--- a/publican/datadir/Common_Content/common/de-DE/Feedback.po
+++ b/publican/datadir/Common_Content/common/de-DE/Feedback.po
@@ -23,15 +23,11 @@ msgstr "Senden Sie uns Ihr Feedback"
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>feedback</primary> <secondary>contact information for this manual</secondary>"
-msgstr ""
+msgstr "<primary>Feedback</primary> <secondary>Kontaktinformationen zu diesem Handbuch</secondary>"
 
 #. Tag: para
 #, no-c-format
 msgid "You should over ride this by creating your own local Feedback.xml file."
 msgstr "Sie sollten dies durch die Erstellung Ihrer eigenen lokalen Feedback.xml-Datei überschreiben."
 
-#~ msgid "feedback"
-#~ msgstr "Feedback"
 
-#~ msgid "contact information for this manual"
-#~ msgstr "Kontaktinformationen zu diesem Handbuch"
