--- a/publican/datadir/Common_Content/common/fr-FR/Feedback.po
+++ b/publican/datadir/Common_Content/common/fr-FR/Feedback.po
@@ -22,15 +22,11 @@ msgstr "Vos commentaires sont importants&nbsp;!"
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>feedback</primary> <secondary>contact information for this manual</secondary>"
-msgstr ""
+msgstr "<primary>commentaires</primary> <secondary>coordonnées pour ce manuel</secondary>"
 
 #. Tag: para
 #, no-c-format
 msgid "You should over ride this by creating your own local Feedback.xml file."
 msgstr "Vous devriez passer outre en créant votre propre fichier local pour vos commentaires: Feedback.xml."
 
-#~ msgid "feedback"
-#~ msgstr "commentaires"
 
-#~ msgid "contact information for this manual"
-#~ msgstr "coordonnées pour ce manuel"
