--- a/publican/datadir/Common_Content/common/gu-IN/Feedback.po
+++ b/publican/datadir/Common_Content/common/gu-IN/Feedback.po
@@ -24,15 +24,11 @@ msgstr "અમને અભિપ્રાયની જરૂર છે!"
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>feedback</primary> <secondary>contact information for this manual</secondary>"
-msgstr ""
+msgstr "<primary>અભિપ્રાય</primary> <secondary>આ માર્ગદર્શિકા માટેની સંપર્ક જાણકારી</secondary>"
 
 #. Tag: para
 #, no-c-format
 msgid "You should over ride this by creating your own local Feedback.xml file."
 msgstr "તમારે તમારી પોતાની સ્થાનિક Feedback.xml ફાઇલને બનાવવા દરમિયાન આની પર ફરીથી લખવુ જોઇએ."
 
-#~ msgid "feedback"
-#~ msgstr "અભિપ્રાય"
 
-#~ msgid "contact information for this manual"
-#~ msgstr "આ માર્ગદર્શિકા માટેની સંપર્ક જાણકારી"
