--- a/publican/datadir/Common_Content/common/it-IT/Feedback.po
+++ b/publican/datadir/Common_Content/common/it-IT/Feedback.po
@@ -20,15 +20,11 @@ msgstr "Inviateci i vostri commenti!"
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>feedback</primary> <secondary>contact information for this manual</secondary>"
-msgstr ""
+msgstr "<primary>commento</primary> <secondary>informazioni di contatto per questo manuale</secondary>"
 
 #. Tag: para
 #, no-c-format
 msgid "You should over ride this by creating your own local Feedback.xml file."
 msgstr "Potreste sovrascriverlo tramite la creazione di un vostro file Feedback.xml locale."
 
-#~ msgid "feedback"
-#~ msgstr "commento"
 
-#~ msgid "contact information for this manual"
-#~ msgstr "informazioni di contatto per questo manuale"
