--- a/publican/datadir/Common_Content/common/kn-IN/Feedback.po
+++ b/publican/datadir/Common_Content/common/kn-IN/Feedback.po
@@ -22,15 +22,11 @@ msgstr "ನಮಗೆ ನಿಮ್ಮ ಅಭಿಪ್ರಾಯದ ಅಗತ್ಯ
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>feedback</primary> <secondary>contact information for this manual</secondary>"
-msgstr ""
+msgstr "<primary>ಅಭಿಪ್ರಾಯ</primary> <secondary>ಈ ಕೈಪಿಡಿಗಾಗಿನ ಸಂಪರ್ಕ ಮಾಹಿತಿ</secondary>"
 
 #. Tag: para
 #, no-c-format
 msgid "You should over ride this by creating your own local Feedback.xml file."
 msgstr "ನಿಮ್ಮದೆ ಆದಂತಹ ಸ್ಥಳೀಯವಾದ Feedback.xml ಕಡವನ್ನು ಸೃಷ್ಟಿಸುವ ಮೂಲಕ ಇದನ್ನು ಅತಿಕ್ರಮಿಸಬೇಕು."
 
-#~ msgid "feedback"
-#~ msgstr "ಅಭಿಪ್ರಾಯ"
 
-#~ msgid "contact information for this manual"
-#~ msgstr "ಈ ಕೈಪಿಡಿಗಾಗಿನ ಸಂಪರ್ಕ ಮಾಹಿತಿ"
