--- a/publican/datadir/Common_Content/common/mr-IN/Feedback.po
+++ b/publican/datadir/Common_Content/common/mr-IN/Feedback.po
@@ -23,15 +23,11 @@ msgstr "आम्हाला प्रतिसाद पाठवा!"
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>feedback</primary> <secondary>contact information for this manual</secondary>"
-msgstr ""
+msgstr "<primary>माघारी वृत</primary> <secondary>ह्या पुस्तिकेकरीता संपर्क माहिती</secondary>"
 
 #. Tag: para
 #, no-c-format
 msgid "You should over ride this by creating your own local Feedback.xml file."
 msgstr "स्वतःचे Feedback.xml फाइल बनवून यांस खोडून पुन्हा लिहू नका."
 
-#~ msgid "feedback"
-#~ msgstr "माघारी वृत"
 
-#~ msgid "contact information for this manual"
-#~ msgstr "ह्या पुस्तिकेकरीता संपर्क माहिती"
