--- a/publican/datadir/Common_Content/common/or-IN/Feedback.po
+++ b/publican/datadir/Common_Content/common/or-IN/Feedback.po
@@ -26,15 +26,11 @@ msgstr "ଆମେ ପ୍ରତିକ୍ରିୟା ଆବଶ୍ଯକ କରୁ
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>feedback</primary> <secondary>contact information for this manual</secondary>"
-msgstr ""
+msgstr "<primary>ପ୍ରତିକ୍ରିୟା</primary> <secondary>ଏହି ମେନ୍ଯୁଆଲ ପାଇଁ ଯୋଗାଯୋଗ ସୂଚନା</secondary>"
 
 #. Tag: para
 #, no-c-format
 msgid "You should over ride this by creating your own local Feedback.xml file."
 msgstr "ଆପଣ ନିଜର Feedback.xml file ନିର୍ମାଣ କରି ଏହାକୁ ନବଲିଖନ କରିପାରିବେ।"
 
-#~ msgid "feedback"
-#~ msgstr "ପ୍ରତିକ୍ରିୟା"
 
-#~ msgid "contact information for this manual"
-#~ msgstr "ଏହି ମେନ୍ଯୁଆଲ ପାଇଁ ଯୋଗାଯୋଗ ସୂଚନା"
