--- a/publican/datadir/Common_Content/common/pa-IN/Feedback.po
+++ b/publican/datadir/Common_Content/common/pa-IN/Feedback.po
@@ -22,7 +22,7 @@ msgstr "ਸਾਨੂੰ ਫੀਡਬੈਕ ਦੀ ਲੋੜ ਹੈ!"
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>feedback</primary> <secondary>contact information for this manual</secondary>"
-msgstr ""
+msgstr "<primary>ਫੀਡਬੈਕ</primary> <secondary>ਇਸ ਦਸਤਾਵੇਜ਼ ਲਈ ਸੰਪਰਕ ਜਾਣਕਾਰੀ</secondary>"
 
 #. Tag: para
 #, no-c-format
