--- a/publican/datadir/Common_Content/common/pt-BR/Feedback.po
+++ b/publican/datadir/Common_Content/common/pt-BR/Feedback.po
@@ -22,15 +22,11 @@ msgstr "Nós precisamos da sua opinião!"
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>feedback</primary> <secondary>contact information for this manual</secondary>"
-msgstr ""
+msgstr "<primary>Opinião</primary> <secondary>contato de informação para este manual</secondary>"
 
 #. Tag: para
 #, no-c-format
 msgid "You should over ride this by creating your own local Feedback.xml file."
 msgstr "Sobrescreva isto criando seu próprio arquivo Feedback.xml local."
 
-#~ msgid "feedback"
-#~ msgstr "Opinião"
 
-#~ msgid "contact information for this manual"
-#~ msgstr "contato de informação para este manual"
