--- a/publican/datadir/Common_Content/common/ru-RU/Feedback.po
+++ b/publican/datadir/Common_Content/common/ru-RU/Feedback.po
@@ -22,15 +22,11 @@ msgstr "Мы ждем ваших отзывов"
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>feedback</primary> <secondary>contact information for this manual</secondary>"
-msgstr ""
+msgstr "<primary>отзывы</primary> <secondary>контактная информация для данного руководства</secondary>"
 
 #. Tag: para
 #, no-c-format
 msgid "You should over ride this by creating your own local Feedback.xml file."
 msgstr "Переопределите эти настройки, создав собственный локальный файл Feedback.xml."
 
-#~ msgid "feedback"
-#~ msgstr "отзывы"
 
-#~ msgid "contact information for this manual"
-#~ msgstr "контактная информация для данного руководства"
