--- a/publican/datadir/Common_Content/common/si-LK/Feedback.po
+++ b/publican/datadir/Common_Content/common/si-LK/Feedback.po
@@ -22,7 +22,7 @@ msgstr "අපට ප්‍රථිචාර අවශ්‍යයි!"
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>feedback</primary> <secondary>contact information for this manual</secondary>"
-msgstr ""
+msgstr "<primary>ප්‍රථිචාරය</primary> <secondary>මෙම අත්පොත සඳහා සම්බන්ධතා තොරතුරු</secondary>"
 
 #. Tag: para
 #, no-c-format
