--- a/publican/datadir/Common_Content/common/zh-CN/Feedback.po
+++ b/publican/datadir/Common_Content/common/zh-CN/Feedback.po
@@ -23,15 +23,11 @@ msgstr "我们需要您的反馈意见！"
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>feedback</primary> <secondary>contact information for this manual</secondary>"
-msgstr ""
+msgstr "<primary>反馈</primary> <secondary>本手册联系人信息</secondary>"
 
 #. Tag: para
 #, no-c-format
 msgid "You should over ride this by creating your own local Feedback.xml file."
 msgstr "您应该创建您自己的本地 Feedback.xml 文件来覆盖这个文件。"
 
-#~ msgid "feedback"
-#~ msgstr "反馈"
 
-#~ msgid "contact information for this manual"
-#~ msgstr "本手册联系人信息"
