--- a/publican/datadir/Common_Content/common/hi-IN/Feedback.po
+++ b/publican/datadir/Common_Content/common/hi-IN/Feedback.po
@@ -26,15 +26,11 @@ msgstr "हमें फीडबैक की जरूरत है!"
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>feedback</primary> <secondary>contact information for this manual</secondary>"
-msgstr ""
+msgstr "<primary>फीडबैक</primary> <secondary>इस मैनुअल के लिए संपर्क सूचना</secondary>"
 
 #. Tag: para
 #, no-c-format
 msgid "You should over ride this by creating your own local Feedback.xml file."
 msgstr "आपको अपना स्वयं का स्थानीय Feedback.xml फाइल बनाकर इसे अध्यारोहित करना चाहिए."
 
-#~ msgid "feedback"
-#~ msgstr "फीडबैक"
 
-#~ msgid "contact information for this manual"
-#~ msgstr "इस मैनुअल के लिए संपर्क सूचना"
