--- a/publican/datadir/Common_Content/common/ja-JP/Feedback.po
+++ b/publican/datadir/Common_Content/common/ja-JP/Feedback.po
@@ -22,15 +22,11 @@ msgstr "フィードバック"
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>feedback</primary> <secondary>contact information for this manual</secondary>"
-msgstr ""
+msgstr "<primary>フィードバック</primary> <secondary>本ガイドに関する連絡先</secondary>"
 
 #. Tag: para
 #, no-c-format
 msgid "You should over ride this by creating your own local Feedback.xml file."
 msgstr "自分のローカル Feedback.xml ファイルを作成することによりこれを上書きする必要があります。"
 
-#~ msgid "feedback"
-#~ msgstr "フィードバック"
 
-#~ msgid "contact information for this manual"
-#~ msgstr "本ガイドに関する連絡先"
