--- a/publican/datadir/Common_Content/common/ko-KR/Feedback.po
+++ b/publican/datadir/Common_Content/common/ko-KR/Feedback.po
@@ -25,15 +25,11 @@ msgstr "피드백을 보내주시기 바랍니다!"
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>feedback</primary> <secondary>contact information for this manual</secondary>"
-msgstr ""
+msgstr "<primary>피드백</primary> <secondary>연락처</secondary>"
 
 #. Tag: para
 #, no-c-format
 msgid "You should over ride this by creating your own local Feedback.xml file."
 msgstr "로컬 Feedback.xml 파일을 생성하여 이를 덮어쓰기 합니다.   "
 
-#~ msgid "feedback"
-#~ msgstr "피드백"
 
-#~ msgid "contact information for this manual"
-#~ msgstr "연락처"
