--- a/publican-redhat/ja-JP/Feedback.po
+++ b/publican-redhat/ja-JP/Feedback.po
@@ -1,19 +1,20 @@
 # translation of Feedback.po to Japanese
 # Kiyoto Hashida <khashida@redhat.com>, 2007, 2010.
+# Noriko Mizumoto <noriko@fedoraproject.org>, 2010.
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-08-06T02:45:30\n"
-"PO-Revision-Date: 2010-03-01 15:53+0900\n"
-"Last-Translator: Kiyoto Hashida <khashida@redhat.com>\n"
-"Language-Team: Japanese <jp@li.org>\n"
+"POT-Creation-Date: 2010-10-07T06:03:52\n"
+"PO-Revision-Date: 2010-08-30 12:51+1000\n"
+"Last-Translator: Noriko Mizumoto <noriko@fedoraproject.org>\n"
+"Language-Team: Japanese\n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
-"Plural-Forms: Plural-Forms: nplurals=1; plural=0;\n"
+"Plural-Forms:  nplurals=1; plural=0;\n"
 "\n"
 
 #. Tag: title
@@ -29,81 +30,54 @@ msgstr "ヘルプが必要ですか？"
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>help</primary> <secondary>getting help</secondary>"
-msgstr ""
+msgstr "<primary>ヘルプ</primary> <secondary>ヘルプを得る</secondary>"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <ulink url=\"http://access.redhat.com\" />. Through the customer portal, you can:"
-msgstr "この文章に説明してある手順で問題に遭遇した場合は、以下のような方法で ヘルプを見つけることができます:"
+msgstr "本文に説明してある手順で問題に遭遇した場合は、Red Hat カスタマーポータル(<ulink url=\"http://access.redhat.com\" />)をご覧ください。カスタマーポータルでは以下を行うことができます。"
 
 #. Tag: para
 #, no-c-format
 msgid "search or browse through a knowledgebase of technical support articles about Red Hat products."
-msgstr ""
+msgstr "Red Hat 製品に関する技術的なサポートの記載をナレッジベースで検索、閲覧することができます。"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "submit a support case to Red Hat Global Support Services (GSS)."
-msgstr "Red Hat グローバルサポートサービス"
+msgstr "サポートケースを Red Hat グローバルサポートサービス(GSS)に提出することができます。"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "access other product documentation."
-msgstr "その他の Red Hat の文書"
+msgstr "他の製品ドキュメントを参照することができます。"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Click on the name of any mailing list to subscribe to that list or to access the list archives."
-msgstr "Red Hat は Red Hat ソフトウェアと技術に関する討論のために多くの電子メール 送信リストをホストしています。公開されているリストは <ulink url=\"https://www.redhat.com/mailman/listinfo\"></ulink> で見つけることができます。リストの名前をクリックするとそのリストをサブスクライブしたり、 リストアーカイブへアクセスできるようになります。 "
+msgstr "また、Red Hat は Red Hat のソフトウェアやテクノロジーに関するディスカッションの場として多くのメーリングリストをホストしています。公開されているメーリングリストについては<ulink url=\"https://www.redhat.com/mailman/listinfo\"></ulink>で一覧を参照してください。メーリングリストをサブスクライブする、またはメーリングリストのアーカイブを参照する場合はそのメーリングリスト名をクリックします。"
 
 #. Tag: title
 #, no-c-format
 msgid "We Need Feedback!"
-msgstr "フィードバックをお願いします。"
+msgstr "フィードバックをお願いします"
 
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>feedback</primary> <secondary>contact information for this manual</secondary>"
-msgstr ""
+msgstr "<primary>フィードバック</primary> <secondary>本文に関する連絡先情報</secondary>"
 
 #. Tag: para
 #, no-c-format
 msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product <application>&PRODUCT;.</application>"
-msgstr "このドキュメント内で誤字/脱字を発見された場合、又はこのドキュメントを改善する案をお持ちの 場合は、弊社までご連絡下さい。該当する製品 <application>&PRODUCT;.</application> に対して Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> に報告を提出してください。"
+msgstr "本文に誤植を見つけられた場合や本文に関する改善案をお持ちの場合はぜひお知らせください。Bugzilla (<ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink>)にて、該当する製品<application>&PRODUCT;.</application>に対しバグ報告をお願いいたします。"
 
 #. Tag: para
-#, no-c-format
-msgid "When submitting a bug report, be sure to mention the manual&#39;s identifier: <citetitle>&BOOKID;</citetitle>"
-msgstr "バグ報告を提出される場合は、そのマニュアルの識別子 <citetitle>&BOOKID;</citetitle> を 忘れずに添えてください。"
+#, fuzzy, no-c-format
+msgid "When submitting a bug report, be sure to mention the manual's identifier: <citetitle>&BOOKID;</citetitle>"
+msgstr "バグ報告を提出される場合は、ドキュメントの識別子となる<citetitle>&BOOKID;</citetitle>を忘れずに添えてください。"
 
 #. Tag: para
 #, no-c-format
 msgid "If you have a suggestion for improving the documentation, try to be as specific as possible when describing it. If you have found an error, please include the section number and some of the surrounding text so we can find it easily."
-msgstr "ドキュメントを改善する御提案をお持ちの場合は、 出来るだけ詳しく説明して頂くようにお願いします。エラーを発見された場合は、そのセクション番号とその周辺の文章も含んで 頂くと弊社でより迅速にその場所が発見できるようになります。"
-
-#~ msgid "help"
-#~ msgstr "ヘルプ"
-
-#~ msgid "getting help"
-#~ msgstr "ヘルプの取得"
-
-#~ msgid "Red Hat Knowledgebase"
-#~ msgstr "Red Hat Knowledgebase"
-
-#~ msgid "Visit the Red Hat Knowledgebase at <ulink url=\"http://kbase.redhat.com\"></ulink> to search or browse through technical support articles about Red Hat products."
-#~ msgstr "<ulink url=\"http://kbase.redhat.com\"></ulink> にある Red Hat Knowledgebase を 開くと、Red Hat の製品に関する技術サポート記事の検索や閲覧ができます。"
-
-#~ msgid "Your Red Hat subscription entitles you to support from Red Hat Global Support Services (GSS). Visit <ulink url=\"http://support.redhat.com\"></ulink> for more information about obtaining help from GSS."
-#~ msgstr "お持ちの Red Hat サブスクリプションが Red Hat グローバルサポートサービス（GSS）からの サポートを得る権利を持っています。GSS からの援助を得る為の情報には、 <ulink url=\"http://support.redhat.com\"></ulink> をご覧下さい。"
-
-#~ msgid "Access other Red Hat documentation at <ulink url=\"http://www.redhat.com/docs\"></ulink>"
-#~ msgstr "<ulink url=\"http://www.redhat.com/docs\"></ulink> にある他の Red Hat 文書に アクセスして下さい。"
-
-#~ msgid "Red Hat electronic mailing lists"
-#~ msgstr "Red Hat 電子メール送信リスト"
-
-#~ msgid "feedback"
-#~ msgstr "フィードバック"
-
-#~ msgid "contact information for this manual"
-#~ msgstr "このドキュメント用の連絡先情報"
+msgstr "ドキュメントに関する改善のご意見については、できるだけ具体的にお願いいたします。誤りを発見された場合は、セクション番号および該当部分の前後の文章も含めてご報告頂くと照合が容易になります。"
