--- a/publican-redhat/or-IN/Feedback.po
+++ b/publican-redhat/or-IN/Feedback.po
@@ -5,15 +5,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-08-06T02:45:30\n"
-"PO-Revision-Date: 2010-03-02 12:30+0530\n"
-"Last-Translator: Manoj Kumar Giri <mgiri@redhat.com>\n"
+"POT-Creation-Date: 2010-10-07T06:03:52\n"
+"PO-Revision-Date: 2010-08-31 13:10+0530\n"
+"Last-Translator: \n"
 "Language-Team: Oriya <oriya-it@googlegroups.com>\n"
 "Language: or\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.4\n"
+"X-Generator: Lokalize 1.0\n"
 "Plural-Forms:  nplurals=2; plural=(n!=1);\n"
 "\n"
 "\n"
@@ -32,32 +32,32 @@ msgstr "ଆପଣ ସାହାଯ୍ୟ ଆବଶ୍ୟକ କରୁଛନ୍ତ
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>help</primary> <secondary>getting help</secondary>"
-msgstr ""
+msgstr "<primary>ସହାୟତା</primary> <secondary>ସହାୟତା ନେଉଅଛି</secondary>"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <ulink url=\"http://access.redhat.com\" />. Through the customer portal, you can:"
-msgstr "ଯଦି ଆପଣ ଏହି ଦଲିଲରେ ବର୍ଣ୍ଣନା କରାଯାଇଥିବା ପଦ୍ଧତିରେ କୌଣସି ଅସୁବାଧିର ସମ୍ମୁଖିନ ହୁଅନ୍ତି, ତେବେ ଆପଣ ନିମ୍ନଲିଖିତ ଉପାୟରେ ସହାୟତା ପାଇପାରିବେ: "
+msgstr "ଯଦି ଆପଣ ଏହି ଦଲିଲରେ ବର୍ଣ୍ଣନା କରାଯାଇଥିବା ପଦ୍ଧତିରେ କୌଣସି ଅସୁବାଧିର ସମ୍ମୁଖିନ ହୁଅନ୍ତି, ତେବେ ଆପଣ <ulink url=\"http://access.redhat.com\" /> ରେ ଥିବା Red Hat ଗ୍ରାହକ ପୃଷ୍ଠାକୁ ପରିଦର୍ଶନ କରନ୍ତୁ। ଏହି ଗ୍ରାହକ ପୃଷ୍ଠା ମାଧ୍ଯମରେ, ଆପଣ ନିମ୍ନଲିଖିତ ଉପାୟରେ ସହାୟତା ପାଇପାରିବେ:"
 
 #. Tag: para
 #, no-c-format
 msgid "search or browse through a knowledgebase of technical support articles about Red Hat products."
-msgstr ""
+msgstr "Red Hat ଉତ୍ପାଦନଗୁଡ଼ିକ ବିଷୟରେ ଯାନ୍ତ୍ରିକ ସହାୟତା ପାଇଁ ଜ୍ଞାନ ଆଧାର ମାଧ୍ଯମରେ ସନ୍ଧାନ କରନ୍ତୁ କିମ୍ବା ବ୍ରାଉଜ କରନ୍ତୁ।"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "submit a support case to Red Hat Global Support Services (GSS)."
-msgstr "Red Hat ସାମଗ୍ରିକ ସମର୍ଥନ ସର୍ଭିସଗୁଡ଼ିକ"
+msgstr "Red Hat ସାମଗ୍ରିକ ସମର୍ଥନ ସର୍ଭିସଗୁଡ଼ିକ (GSS) ରେ ଗୋଟିଏ ସମର୍ଥନ ଦାଖଲ କରନ୍ତୁ।"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "access other product documentation."
-msgstr "ଅନ୍ୟାନ୍ୟ Red Hat ଦଲିଲିକରଣ"
+msgstr "ଅନ୍ୟାନ୍ୟ ଉତ୍ପାଦନ ଦଲିଲିକରଣକୁ ଅଭିଗମ୍ୟ କରନ୍ତୁ।"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Click on the name of any mailing list to subscribe to that list or to access the list archives."
-msgstr "Red Hat ଅନେକ ଇଲେକ୍ଟ୍ରୋନିକ ମେଲିଙ୍ଗ ତାଲିକାଗୁଡ଼ିକୁ Red Hat ସଫ୍ଟୱେର ଏବଂ ପ୍ରଯୁକ୍ତି ବିଜ୍ଞାନ ବିଷୟରେ ଆଲୋଚନା କରିବା ପାଇଁ ହୋଷ୍ଟ କରିଥାଏ। ଆପଣ ସର୍ବସାଧାରଣ ପାଇଁ ଉପଲବ୍ଧ ତାଲିକାଗୁଡ଼ିକର ଗୋଟିଏ ତାଲିକା <ulink url=\"https://www.redhat.com/mailman/listinfo\"></ulink> ରେ ପାଇପାରିବେ। ଯେକୌଣସି ତାଲିକାର ଗୋଟିଏ ନାମ ଉପରେ କ୍ଲିକ କରି ସେହି ତାଲିକାରେ ସଦସ୍ୟତା ପାଇପାରିବେ ଅଥବା ତାଲିକା ଅଭିଲେଖଗୁଡ଼ିକୁ ଅଭିଗମ୍ୟ କରିପାରିବେ।"
+msgstr "Red Hat ଅନେକ ଇଲେକ୍ଟ୍ରୋନିକ ମେଲିଙ୍ଗ ତାଲିକାଗୁଡ଼ିକୁ Red Hat ସଫ୍ଟୱେର ଏବଂ ପ୍ରଯୁକ୍ତି ବିଜ୍ଞାନ ବିଷୟରେ ଆଲୋଚନା କରିବା ପାଇଁ ହୋଷ୍ଟ କରିଥାଏ। ଆପଣ ସର୍ବସାଧାରଣ ପାଇଁ ଉପଲବ୍ଧ ତାଲିକାଗୁଡ଼ିକର ଗୋଟିଏ ତାଲିକା <ulink url=\"https://www.redhat.com/mailman/listinfo\" /> ରେ ପାଇପାରିବେ। ଯେକୌଣସି ତାଲିକାର ଗୋଟିଏ ନାମ ଉପରେ କ୍ଲିକ କରି ସେହି ତାଲିକାରେ ସଦସ୍ୟତା ପାଇପାରିବେ ଅଥବା ତାଲିକା ଅଭିଲେଖଗୁଡ଼ିକୁ ଅଭିଗମ୍ୟ କରିପାରିବେ।"
 
 #. Tag: title
 #, no-c-format
@@ -67,7 +67,7 @@ msgstr "ଆମେ ପ୍ରତିକ୍ରିୟା ଆବଶ୍ଯକ କରୁ
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>feedback</primary> <secondary>contact information for this manual</secondary>"
-msgstr ""
+msgstr "<primary>feedback</primary> <secondary>ଏହି ହସ୍ତପୁସ୍ତକ ପାଇଁ ସମ୍ପର୍କଗୁଡ଼ିକର ସୂଚନା</secondary>"
 
 #. Tag: para
 #, no-c-format
@@ -75,8 +75,8 @@ msgid "If you find a typographical error in this manual, or if you have thought 
 msgstr "ଆପଣ ଏହି ମେନ୍ଯୁଆଲରେ ଗୋଟିଏ ମୂଦ୍ରଣ ଜନିତ ତୃଟି ପାଇଲେ, କିମ୍ବା ଏହାକୁ ଉନ୍ନତ କରିବା ପାଇଁ ଆପଣଙ୍କ ନିକଟରେ କୌଣସି ଉପାୟ ଥିଲେ, ଆମେ ଆପଣଙ୍କ ନିକଟରୁ ସେ ବିଷୟରେ ଶୁଣିବା ପାଇଁ ଚାହିଁବୁ! ଦୟାକରି <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> କୁ ଯାଇ ବଗଜିଲାରେ <application>&PRODUCT;</application> ବିରୋଧରେ ଗୋଟିଏ ତୃଟି ବିବରଣୀ ଦିଅନ୍ତୁ।"
 
 #. Tag: para
-#, no-c-format
-msgid "When submitting a bug report, be sure to mention the manual&#39;s identifier: <citetitle>&BOOKID;</citetitle>"
+#, fuzzy, no-c-format
+msgid "When submitting a bug report, be sure to mention the manual's identifier: <citetitle>&BOOKID;</citetitle>"
 msgstr "ଗୋଟିଏ ତୃଟି ବିବରଣୀ ଦାଖଲ କରିବା ସମୟରେ, ହସ୍ତପୁସ୍ତକ&#39;s ପରିଚାୟକକୁ ଉଲ୍ଲେଖ କରିବା ପାଇଁ ସୁନିଶ୍ଚିତ କରନ୍ତୁ:<citetitle>&BOOKID;</citetitle>"
 
 #. Tag: para
