--- a/publican-redhat/si-LK/Feedback.po
+++ b/publican-redhat/si-LK/Feedback.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-08-06T02:45:30\n"
+"POT-Creation-Date: 2010-10-07T06:03:52\n"
 "PO-Revision-Date: 2007-10-30 15:16+0530\n"
 "Last-Translator: Danishka Navin <snavin@redhat.com>\n"
 "Language-Team: Sinhala <en@li.org>\n"
@@ -72,7 +72,7 @@ msgstr "මෙම අත්පොතේ මුද්‍රණ දෝෂයක්
 
 #. Tag: para
 #, fuzzy, no-c-format
-msgid "When submitting a bug report, be sure to mention the manual&#39;s identifier: <citetitle>&BOOKID;</citetitle>"
+msgid "When submitting a bug report, be sure to mention the manual's identifier: <citetitle>&BOOKID;</citetitle>"
 msgstr "දෝෂ වාර්තාවක් ලබාදිමේදි අත්පොත් හදුනාගැනීම සඳහන් කිරීමට සැළකිළිමත් වන්න: <citetitle>&BOOKID;</citetitle>"
 
 #. Tag: para
