--- a/publican-redhat/te-IN/Feedback.po
+++ b/publican-redhat/te-IN/Feedback.po
@@ -4,8 +4,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-08-06T02:45:30\n"
-"PO-Revision-Date: 2010-03-02 14:16+0530\n"
+"POT-Creation-Date: 2010-10-07T06:03:52\n"
+"PO-Revision-Date: 2010-09-06 12:44+0530\n"
 "Last-Translator: Krishna Babu K <kkrothap@redhat.com>\n"
 "Language-Team: Telugu <en@li.org>\n"
 "Language: te\n"
@@ -14,6 +14,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
 "Plural-Forms: nplurals=2; plural=(n!=1);\n"
+"\n"
 "\n"
 
 #. Tag: title
@@ -29,32 +30,32 @@ msgstr "మీకు సహాయం కావలెనా?"
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>help</primary> <secondary>getting help</secondary>"
-msgstr ""
+msgstr "<primary>సహాయం</primary> <secondary>సహాయం పొందుట</secondary>"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <ulink url=\"http://access.redhat.com\" />. Through the customer portal, you can:"
-msgstr "ఈ పత్రికీకరణనందు వివరించిన విధానంతో మీరేమైనా సంక్లిష్టతకు గురైతే, ఈ కింది మార్గాలలో మీరు సహాయం కనుగొనగలరు:"
+msgstr "ఈ పత్రికీకరణ నందు వివరించిన విధానమునందు మీరు సంక్లిష్టతను యెదుర్కొంటే, Red Hat వినియోగదారి పోర్టల్‌ను <ulink url=\"http://access.redhat.com\" /> వద్ద దర్శించండి. వినియోగదారి పోర్టల్ ద్వారా మీరు యివి చేయవచ్చును:"
 
 #. Tag: para
 #, no-c-format
 msgid "search or browse through a knowledgebase of technical support articles about Red Hat products."
-msgstr ""
+msgstr "Red Hat వుత్పత్తుల గురించి సాంకేతిక మద్దతును అందించు వ్యాసముల యొక్క జ్ఞానభాండాగారము(నాలెడ్జుబేస్) నందు మీరు శోధించవచ్చు లేదా బ్రౌజ్ చేయవచ్చు."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "submit a support case to Red Hat Global Support Services (GSS)."
-msgstr "Red Hat గ్లోబల్ సపోర్ట్ సర్వీసెస్"
+msgstr "Red Hat గ్లోబల్ సపోర్ట్ సర్వీసెస్ (GSS) మద్దతుకు కేస్ అప్పగించవచ్చును."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "access other product documentation."
-msgstr "ఇతర Red Hat పత్రికీకరణ"
+msgstr "ఇతర వుత్పత్తి పత్రికీకరణను యాక్సెస్ చేయవచ్చును."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Click on the name of any mailing list to subscribe to that list or to access the list archives."
-msgstr "Red Hat సాఫ్టువేర్ మరియు సంకేతికతను చర్చించుట కొరకై Red Hat యెక్కువ సంఖ్యలో యెలక్ట్రోనిక్ మెయిలింగ్ లిస్ట్స్ వుంచును. పబ్లిక్‌గా అందుబాటులో వున్న జాబితా(లిస్ట్)లను మీరు <ulink url=\"https://www.redhat.com/mailman/listinfo\"></ulink> వద్ద కనుగొనగలరు. జాబితానందు జేరుటకు లేదా జాబితా యొక్క అర్చీవ్‌లను యాక్సెస్ చేయుటకు జాబితా యొక్క నామముపై నొక్కుము."
+msgstr "Red Hat సాఫ్టువేర్ మరియు సాంకేతికతను చర్చించుట కొరకై Red Hat యెక్కువ సంఖ్యలో యెలక్ట్రోనిక్ మెయిలింగ్ లిస్ట్స్ వుంచును. పబ్లిక్‌గా అందుబాటులో వున్న జాబితా(లిస్ట్)లను మీరు <ulink url=\"https://www.redhat.com/mailman/listinfo\" /> వద్ద కనుగొనగలరు. జాబితానందు జేరుటకు లేదా జాబితా యొక్క అర్చీవ్‌లను యాక్సెస్ చేయుటకు జాబితా యొక్క నామముపై నొక్కుము."
 
 #. Tag: title
 #, no-c-format
@@ -64,7 +65,7 @@ msgstr "మాకు మీ ప్రతిస్పందన అవసరం!"
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>feedback</primary> <secondary>contact information for this manual</secondary>"
-msgstr ""
+msgstr "<primary>స్పందన</primary> <secondary>ఈ మాన్యువల్ వుద్దేశించి సంప్రదించుటకు సమాచారము</secondary>"
 
 #. Tag: para
 #, no-c-format
@@ -72,38 +73,11 @@ msgid "If you find a typographical error in this manual, or if you have thought 
 msgstr "మీరు ఈ చేతి పుస్తకం నందు టైపోగ్రాఫికల్ దోషాన్ని గాని, లేదా మీరు ఈ చేతిపుస్తకం ను ఇంకా బాగా తయారుచేసే మార్గం ఆలోచించిన, మీరు చెప్పింది వినుటకు మేము ఇష్టపడతాము.దయచేసి నివేదికను Bugzilla లో ఉంచండి: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink>ఉత్పత్తి కి విరుద్దంగా<application>&PRODUCT;.</application>"
 
 #. Tag: para
-#, no-c-format
-msgid "When submitting a bug report, be sure to mention the manual&#39;s identifier: <citetitle>&BOOKID;</citetitle>"
+#, fuzzy, no-c-format
+msgid "When submitting a bug report, be sure to mention the manual's identifier: <citetitle>&BOOKID;</citetitle>"
 msgstr "బగ్ నివేదికను అప్పగించునప్పుడు, ఖచ్చితంగా చేతిపుస్తకం గుర్తింపును తెలియపరుచుట మరువవద్దు: <citetitle>&BOOKID;</citetitle>"
 
 #. Tag: para
 #, no-c-format
 msgid "If you have a suggestion for improving the documentation, try to be as specific as possible when describing it. If you have found an error, please include the section number and some of the surrounding text so we can find it easily."
 msgstr "మీరు పత్రికీకరణ మెరుగుదల కొరకు సలహా కలిగిఉంటే,దానిని వివరించేటప్పుడు సాద్యమైనంత వరకు యెంత వీలైతే అంత నిర్ధిష్టంగా వివరించుటకు ప్రయత్నించుము. మీరు ఒక దోషాన్ని కనుగొన్నట్లైతే,దయచేసి విభాగం సంఖ్య మరియు దాని చుట్టూవున్న టెక్స్టును కలపండి అప్పుడు మేము సులభంగా కనుగొనకలుగుతాము."
-
-#~ msgid "help"
-#~ msgstr "సహాయం"
-
-#~ msgid "getting help"
-#~ msgstr "సహాయం పొందుట"
-
-#~ msgid "Red Hat Knowledgebase"
-#~ msgstr "Red Hat విజ్ఞతాధారం(నాలెడ్జ్‍బేస్)"
-
-#~ msgid "Visit the Red Hat Knowledgebase at <ulink url=\"http://kbase.redhat.com\"></ulink> to search or browse through technical support articles about Red Hat products."
-#~ msgstr "Red Hat వుత్పత్తుల గురించి సాంకేతిక మద్దతు వ్యాసాలను శోధించుటకు లేదా అన్వేషించుటకు <ulink url=\"http://kbase.redhat.com\"></ulink> యిచట Red Hat విజ్ఞతాధారం(నాలెడ్జ్‍బేస్)ను దర్శించండి."
-
-#~ msgid "Your Red Hat subscription entitles you to support from Red Hat Global Support Services (GSS). Visit <ulink url=\"http://support.redhat.com\"></ulink> for more information about obtaining help from GSS."
-#~ msgstr "మీ Red Hat చందా(సబ్‌స్క్రిప్షన్) మీకు Red Hat గ్లోబల్ సపోర్ట్ సర్వీసెస్ (GSS) నుండి మద్దతునుకూడా అందించును. GSS నుండి సహాయం పొందుటపై మరింత సమాచారము కొరకు <ulink url=\"http://support.redhat.com\"></ulink> చూడుము."
-
-#~ msgid "Access other Red Hat documentation at <ulink url=\"http://www.redhat.com/docs\"></ulink>"
-#~ msgstr "ఇతర Red Hat పత్రికీకరణను <ulink url=\"http://www.redhat.com/docs\"></ulink> వద్ద యాక్సెస్ చేయుము."
-
-#~ msgid "Red Hat electronic mailing lists"
-#~ msgstr "Red Hat యెలక్ట్రోనిక్ మెయిలింగ్ లిస్ట్స్"
-
-#~ msgid "feedback"
-#~ msgstr "ప్రతిస్పందన"
-
-#~ msgid "contact information for this manual"
-#~ msgstr "ఈ చేతి పుస్తకం కొరకు సంభందిత సమాచారం"
