--- a/publican-redhat/zh-CN/Feedback.po
+++ b/publican-redhat/zh-CN/Feedback.po
@@ -1,4 +1,4 @@
-# translation of Feedback.po to Simplified Chinese
+# translation of Feedback.po to Wei Liu
 # Xi HUANG <xhuang@redhat.com>, 2007.
 # Leah Liu <lliu@redhat.com>, 2010.
 # translation of Feedback.po to
@@ -6,10 +6,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-08-06T02:45:30\n"
-"PO-Revision-Date: 2010-03-01 15:14+1000\n"
+"POT-Creation-Date: 2010-10-07T06:03:52\n"
+"PO-Revision-Date: 2010-08-16 17:08+1000\n"
 "Last-Translator: Leah Liu <lliu@redhat.com>\n"
-"Language-Team: Simplified Chinese\n"
+"Language-Team: Wei Liu\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -29,32 +29,32 @@ msgstr "您需要帮助吗？"
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>help</primary> <secondary>getting help</secondary>"
-msgstr ""
+msgstr "<primary>帮助</primary> <secondary>获得帮助</secondary>"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <ulink url=\"http://access.redhat.com\" />. Through the customer portal, you can:"
-msgstr "如果您对本文档论述的步骤有疑问，您可以通过以下方法获得帮助："
+msgstr "如果您对本文档论述的步骤有疑问，请访问红帽客户门户网站 <ulink url=\"http://access.redhat.com\" />。通过客户门户网站，您可以："
 
 #. Tag: para
 #, no-c-format
 msgid "search or browse through a knowledgebase of technical support articles about Red Hat products."
-msgstr ""
+msgstr "搜索或者浏览有关红帽产品技术支持文章的知识库。"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "submit a support case to Red Hat Global Support Services (GSS)."
-msgstr "红帽全球支持服务"
+msgstr "向红帽全球支持服务（GSS）提交支持案例。"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "access other product documentation."
-msgstr "其它红帽文档"
+msgstr "访问其它红帽文档。"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Click on the name of any mailing list to subscribe to that list or to access the list archives."
-msgstr "红帽托管了大量讨论红帽软件和技术的电子邮件列表。公开列表位于 <ulink url=\"https://www.redhat.com/mailman/listinfo\"></ulink>。点击任意列表名称即可订阅该列表或者访问列表归档。"
+msgstr "红帽还托管了大量讨论红帽软件和技术的电子邮件列表。公开列表位于 <ulink url=\"https://www.redhat.com/mailman/listinfo\"></ulink>。点击任意列表名称即可订阅该列表或者访问列表归档。"
 
 #. Tag: title
 #, no-c-format
@@ -64,7 +64,7 @@ msgstr "我们需要您的反馈！"
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>feedback</primary> <secondary>contact information for this manual</secondary>"
-msgstr ""
+msgstr "<primary>反馈</primary> <secondary>本手册的联络信息</secondary>"
 
 #. Tag: para
 #, no-c-format
@@ -72,38 +72,11 @@ msgid "If you find a typographical error in this manual, or if you have thought 
 msgstr "如​果​您​发​现​了​排​印​错​误​或​者​有​改​进​本​文​档​的​建​议​，我​们​希​望​能​听​取​您​的​意​见​。​请​在 Bugzilla <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> 中​根据产品 <application>&PRODUCT;.</application> 提交​报​告​。​"
 
 #. Tag: para
-#, no-c-format
-msgid "When submitting a bug report, be sure to mention the manual&#39;s identifier: <citetitle>&BOOKID;</citetitle>"
+#, fuzzy, no-c-format
+msgid "When submitting a bug report, be sure to mention the manual's identifier: <citetitle>&BOOKID;</citetitle>"
 msgstr "提交报告时，请​提供​文​档​的​标​识​符​：<citetitle>&BOOKID;</citetitle>"
 
 #. Tag: para
 #, no-c-format
 msgid "If you have a suggestion for improving the documentation, try to be as specific as possible when describing it. If you have found an error, please include the section number and some of the surrounding text so we can find it easily."
 msgstr "如​果​您​有​改​进​本​文​档​的​建​议​，请​尽​量​将​其​明​确​化​。​如​果​您​发​现​了​错​误​，请​指​出​章​节​号​以及上下文​，以​便​我​们​尽​快​找​到​并​更​正​该​。​"
-
-#~ msgid "help"
-#~ msgstr "帮助"
-
-#~ msgid "getting help"
-#~ msgstr "获得帮助"
-
-#~ msgid "Red Hat Knowledgebase"
-#~ msgstr "红帽知识库"
-
-#~ msgid "Visit the Red Hat Knowledgebase at <ulink url=\"http://kbase.redhat.com\"></ulink> to search or browse through technical support articles about Red Hat products."
-#~ msgstr "访问红帽知识库 <ulink url=\"http://kbase.redhat.com\"></ulink> 搜索或者浏览有关红帽产品的技术支持文章。"
-
-#~ msgid "Your Red Hat subscription entitles you to support from Red Hat Global Support Services (GSS). Visit <ulink url=\"http://support.redhat.com\"></ulink> for more information about obtaining help from GSS."
-#~ msgstr "您的红帽订阅可让您获得红帽全球支持服务（GSS）。有关从 GSS 获得帮助的详情请访问 <ulink url=\"http://support.redhat.com\"></ulink>。"
-
-#~ msgid "Access other Red Hat documentation at <ulink url=\"http://www.redhat.com/docs\"></ulink>"
-#~ msgstr "在 <ulink url=\"http://www.redhat.com/docs\"></ulink> 访问其它红帽文档"
-
-#~ msgid "Red Hat electronic mailing lists"
-#~ msgstr "红帽电子邮件列表"
-
-#~ msgid "feedback"
-#~ msgstr "反馈"
-
-#~ msgid "contact information for this manual"
-#~ msgstr "本手册的联系人"
