--- a/publican-redhat/de-DE/Feedback.po
+++ b/publican-redhat/de-DE/Feedback.po
@@ -1,14 +1,12 @@
 # translation of Feedback.po to
-# PGP-KeyID: 0x037FD3CF <ttrinks@redhat.com>, 2007.
-# sknirT omiT <<moc.tahder@sknirtt>>, 2010.
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-08-06T02:45:30\n"
-"PO-Revision-Date: 2010-02-26 15:32+1000\n"
-"Last-Translator: sknirT omiT <<moc.tahder@sknirtt>>\n"
-"Language-Team:  <de@li.org>\n"
+"POT-Creation-Date: 2010-10-07T06:03:52\n"
+"PO-Revision-Date: 2010-08-13 09:42+1000\n"
+"Last-Translator: \n"
+"Language-Team:  <en@li.org>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -28,32 +26,32 @@ msgstr "Brauchen Sie Hilfe?"
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>help</primary> <secondary>getting help</secondary>"
-msgstr ""
+msgstr "<primary>Hilfe</primary> <secondary>Hilfe bekommen</secondary>"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <ulink url=\"http://access.redhat.com\" />. Through the customer portal, you can:"
-msgstr "Falls Sie Schwierigkeiten mit einer der in diesem Handbuch beschriebenen Prozeduren haben, bestehen die folgenden Möglichkeiten, um Hilfe zu erhalten:"
+msgstr "Falls Sie Schwierigkeiten mit einer der in diesem Handbuch beschriebenen Prozeduren haben, besuchen Sie das Red Hat Kundenportal unter <ulink url=\"http://access.redhat.com\" />. Via Kundenportal können Sie:"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "search or browse through a knowledgebase of technical support articles about Red Hat products."
-msgstr "Besuchen Sie die Red Hat Knowledgebase unter <ulink url=\"http://kbase.redhat.com\" />, um in Artikeln rund um technische Hilfestellungen für Red Hat Produkte zu suchen oder zu stöbern."
+msgstr "eine Knowledgebase bestehend aus Artikeln rund um technischen Support für Red Hat Produkte durchsuchen oder zu durchstöbern."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "submit a support case to Red Hat Global Support Services (GSS)."
-msgstr "Red Hat Global Support Services"
+msgstr "einen Support-Case bei Red Hat Global Support Services (GSS) einreichen."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "access other product documentation."
-msgstr "Weitere Red Hat Dokumentationen"
+msgstr "auf weitere Produktdokumentationen zugreifen."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Click on the name of any mailing list to subscribe to that list or to access the list archives."
-msgstr "Red Hat unterhält eine Vielzahl von Mailing-Listen zur Diskussion über Red Hat Software und Technologie. Eine Übersicht der öffentlich verfügbaren Listen finden Sie unter <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Klicken Sie auf den Namen einer Liste für weitere Einzelheiten zum Abonnieren dieser Liste oder um auf deren Archiv zuzugreifen."
+msgstr "Red Hat unterhält außerdem eine Vielzahl von Mailing-Listen zur Diskussion über Red Hat Software und Technologie. Eine Übersicht der öffentlich verfügbaren Listen finden Sie unter <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Klicken Sie auf den Namen einer Liste für weitere Einzelheiten zum Abonnieren dieser Liste oder um auf deren Archiv zuzugreifen."
 
 #. Tag: title
 #, no-c-format
@@ -63,7 +61,7 @@ msgstr "Wir freuen uns auf Ihr Feedback!"
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>feedback</primary> <secondary>contact information for this manual</secondary>"
-msgstr ""
+msgstr "<primary>Feedback</primary> <secondary>Kontaktinformationen für dieses Handbuch</secondary>"
 
 #. Tag: para
 #, no-c-format
@@ -72,34 +70,10 @@ msgstr "Wenn Sie einen Fehler in diesem Handbuch finden oder eine Idee haben, wi
 
 #. Tag: para
 #, fuzzy, no-c-format
-msgid "When submitting a bug report, be sure to mention the manual&#39;s identifier: <citetitle>&BOOKID;</citetitle>"
-msgstr "Vergewissern Sie sich beim Einreichen eines Fehlerberichts die Kennung des Handbuchs mit anzugeben: <citetitle>&BOOKID;</citetitle>"
+msgid "When submitting a bug report, be sure to mention the manual's identifier: <citetitle>&BOOKID;</citetitle>"
+msgstr "Vergewissern Sie sich beim Einreichen eines Fehlerberichts, dass Sie die Kennung des Handbuchs mit angeben: <citetitle>&BOOKID;</citetitle>"
 
 #. Tag: para
 #, no-c-format
 msgid "If you have a suggestion for improving the documentation, try to be as specific as possible when describing it. If you have found an error, please include the section number and some of the surrounding text so we can find it easily."
 msgstr "Falls Sie uns einen Vorschlag zur Verbesserung der Dokumentation senden möchten, sollten Sie hierzu möglichst genaue Angaben machen. Wenn Sie einen Fehler gefunden haben, geben Sie bitte die Nummer des Abschnitts und einen Ausschnitt des Textes an, damit wir diesen leicht finden können."
-
-#~ msgid "help"
-#~ msgstr "Hilfe"
-
-#~ msgid "getting help"
-#~ msgstr "Hilfe bekommen"
-
-#~ msgid "Red Hat Knowledgebase"
-#~ msgstr "Red Hat Knowledgebase"
-
-#~ msgid "Your Red Hat subscription entitles you to support from Red Hat Global Support Services (GSS). Visit <ulink url=\"http://support.redhat.com\" /> for more information about obtaining help from GSS."
-#~ msgstr "Ihr Red Hat Abonnement berechtigt Sie für den Support von Red Hat Global Support Services (GSS). Unter <ulink url=\"http://support.redhat.com\" /> finden Sie weitere Informationen darüber, wie Sie Hilfe von GSS erhalten."
-
-#~ msgid "Access other Red Hat documentation at <ulink url=\"http://www.redhat.com/docs\" />"
-#~ msgstr "Weitere Red Hat Dokumentationen finden Sie unter <ulink url=\"http://www.redhat.com/docs\" />"
-
-#~ msgid "Red Hat electronic mailing lists"
-#~ msgstr "Red Hat Mailing-Listen"
-
-#~ msgid "feedback"
-#~ msgstr "Feedback"
-
-#~ msgid "contact information for this manual"
-#~ msgstr "Kontaktinformationen für dieses Handbuch"
