--- a/publican-redhat/es-ES/Feedback.po
+++ b/publican-redhat/es-ES/Feedback.po
@@ -5,10 +5,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-08-06T02:45:30\n"
-"PO-Revision-Date: 2010-03-02 09:50+1000\n"
-"Last-Translator: Gladys Guerrero  <gguerrer@redhat.com>\n"
-"Language-Team: Spanish <es@li.org>\n"
+"POT-Creation-Date: 2010-10-07T06:03:52\n"
+"PO-Revision-Date: 2010-08-23 16:25+1000\n"
+"Last-Translator: Gladys Guerrero <gguerrer@redhat.com>\n"
+"Language-Team: Spanish <en@li.org>\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -28,32 +28,32 @@ msgstr "¿Necesita ayuda?"
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>help</primary> <secondary>getting help</secondary>"
-msgstr ""
+msgstr "<primary>Ayuda</primary> <secondary>Obteniendo ayuda</secondary>"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <ulink url=\"http://access.redhat.com\" />. Through the customer portal, you can:"
-msgstr "Si encuentra dificultades con alguno de los procedimientos descritos en este documento, puede obtener ayuda de esta forma:"
+msgstr "Si encuentra dificultades con alguno de los procedimientos descritos en este documento, visite el Portal del cliente de Red Hat en <ulink url=\"http://access.redhat.com\" />. A través del portal del cliente, usted podrá:"
 
 #. Tag: para
 #, no-c-format
 msgid "search or browse through a knowledgebase of technical support articles about Red Hat products."
-msgstr ""
+msgstr "buscar o navegar a través de la base de artículos de soporte técnico sobre productos de Red Hat."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "submit a support case to Red Hat Global Support Services (GSS)."
-msgstr "Red Hat Global Support Services (GSS)"
+msgstr "enviar un caso de soporte a Servicios de Soporte Global de Red Hat (GSS)"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "access other product documentation."
-msgstr "Otra documentación de Red Hat"
+msgstr "acceder a otra documentación del producto."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Click on the name of any mailing list to subscribe to that list or to access the list archives."
-msgstr "Red Hat alberga una gran lista de correo electrónico para discutir sobre software y tecnología de Red Hat. Encontrará un listado de las listas de correo disponibles al público en <ulink url=\"https://www.redhat.com/mailman/listinfo\"></ulink>. Haga clic en el nombre de la lista a la que quiera suscribirse o para acceder a los archivos de listados."
+msgstr "Red Hat alberga una lista grande de correos electrónicos para discutir sobre software de Red Hat y tecnología. Encontrará un listado de las listas de correo disponibles al público en <ulink url=\"https://www.redhat.com/mailman/listinfo\"></ulink>. Haga clic en el nombre de la lista a la que quiera suscribirse o para acceder a los archivos de listados."
 
 #. Tag: title
 #, no-c-format
@@ -63,7 +63,7 @@ msgstr "¡Necesitamos sus comentarios!"
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>feedback</primary> <secondary>contact information for this manual</secondary>"
-msgstr ""
+msgstr "<primary>Comentarios</primary> <secondary>Información de contacto para este manual</secondary>"
 
 #. Tag: para
 #, no-c-format
@@ -71,38 +71,11 @@ msgid "If you find a typographical error in this manual, or if you have thought 
 msgstr "Si encuentra un error tipográfico en este manual o si ha pensado que hay alguna manera de mejorar este manual, nos gustaría escuchar sus sugerencias. Por favor complete un reporte en Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> relacionando el producto <application>&PRODUCT;</application>."
 
 #. Tag: para
-#, no-c-format
-msgid "When submitting a bug report, be sure to mention the manual&#39;s identifier: <citetitle>&BOOKID;</citetitle>"
+#, fuzzy, no-c-format
+msgid "When submitting a bug report, be sure to mention the manual's identifier: <citetitle>&BOOKID;</citetitle>"
 msgstr "Cuando envíe un reporte de error no olvide mencionar el identificador&#39; del manual: <citetitle>&BOOKID;</citetitle>"
 
 #. Tag: para
 #, no-c-format
 msgid "If you have a suggestion for improving the documentation, try to be as specific as possible when describing it. If you have found an error, please include the section number and some of the surrounding text so we can find it easily."
-msgstr "Si tiene una sugerencia para mejorar la documentación, trate de ser tan específico como sea posible. Si ha encontrado un error, por favor incluya el número de sección y parte del texto que lo rodea para que podamos encontrarlo más fácilmente."
-
-#~ msgid "help"
-#~ msgstr "Ayuda"
-
-#~ msgid "getting help"
-#~ msgstr "Cómo obtener ayuda"
-
-#~ msgid "Red Hat Knowledgebase"
-#~ msgstr "Red Hat Knowledgebase"
-
-#~ msgid "Visit the Red Hat Knowledgebase at <ulink url=\"http://kbase.redhat.com\"></ulink> to search or browse through technical support articles about Red Hat products."
-#~ msgstr "Visite la base de datos de Red Hat en <ulink url=\"http://kbase.redhat.com\"></ulink> para buscar o navegar a través de los artículos de soporte técnico acerca de los productos de Red Hat."
-
-#~ msgid "Your Red Hat subscription entitles you to support from Red Hat Global Support Services (GSS). Visit <ulink url=\"http://support.redhat.com\"></ulink> for more information about obtaining help from GSS."
-#~ msgstr "Su suscripción de Red Hat le da derecho a la asistencia técnica de Red Hat Global Support Services (GSS). Visite <ulink url=\"http://support.redhat.com\"></ulink> para obtener mayor información sobre cómo obtener ayuda de GSS."
-
-#~ msgid "Access other Red Hat documentation at <ulink url=\"http://www.redhat.com/docs\"></ulink>"
-#~ msgstr "Puede acceder a otros documentos de Red Hat en <ulink url=\"http://www.redhat.com/docs\"></ulink>"
-
-#~ msgid "Red Hat electronic mailing lists"
-#~ msgstr "Listas de correo electrónico de Red Hat"
-
-#~ msgid "feedback"
-#~ msgstr "Comentarios"
-
-#~ msgid "contact information for this manual"
-#~ msgstr "Información de contacto para este manual"
+msgstr "Si tiene alguna sugerencia para mejorar la documentación, trate de ser tan específico como sea posible. Si ha encontrado algún error, por favor incluya el número de la sección y parte del texto que lo rodea para que sea más fácil ubicarlo."
