--- a/publican-redhat/fr-FR/Feedback.po
+++ b/publican-redhat/fr-FR/Feedback.po
@@ -5,8 +5,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-08-06T02:45:30\n"
-"PO-Revision-Date: 2010-03-02 11:45+1000\n"
+"POT-Creation-Date: 2010-10-07T06:03:52\n"
+"PO-Revision-Date: 2010-08-23 12:14+1000\n"
 "Last-Translator: Sam Friedmann <sam.friedmann@redhat.com>\n"
 "Language-Team: French <French fedora-trans-fr@fedoraproject.org>\n"
 "Language: \n"
@@ -28,32 +28,32 @@ msgstr "Avez-vous besoin d'aide ?"
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>help</primary> <secondary>getting help</secondary>"
-msgstr ""
+msgstr "<primary>aide</primary> <secondary>obtenir de l'aide</secondary>"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <ulink url=\"http://access.redhat.com\" />. Through the customer portal, you can:"
-msgstr "Si vous rencontrez des difficultés avec l'une des procédures décrites dans cette documentation, vous pouvez obtenir de l'aide comme suit :"
+msgstr "Si vous rencontrez des difficultés avec l'une des procédures décrites dans cette documentation, veuillez visiter le Portail Client Red Hat sur <ulink url=\"http://access.redhat.com\" />. Sur le portail client, vous pourrez :"
 
 #. Tag: para
 #, no-c-format
 msgid "search or browse through a knowledgebase of technical support articles about Red Hat products."
-msgstr ""
+msgstr "effectuer des recherches ou naviguer sur la base de connaissances d'articles de support techniques concernant les produits Red Hat."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "submit a support case to Red Hat Global Support Services (GSS)."
-msgstr "Service de support global Red Hat (GSS)"
+msgstr "soumettre une requête de support au service de support global Red Hat (GSS)."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "access other product documentation."
-msgstr "Autres documents de Red Hat"
+msgstr "accéder aux documents des autres produits de Red Hat."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Click on the name of any mailing list to subscribe to that list or to access the list archives."
-msgstr "Red Hat est l'hôte de nombreuses listes de diffusion traitant de ses logiciels et technologies. Vous trouverez un ensemble des listes de diffusion disponibles au public sur <ulink url=\"https://www.redhat.com/mailman/listinfo\"></ulink>. Cliquez sur le nom d'une liste pour vous inscrire à celle-ci ou pour accéder à ses archives."
+msgstr "Red Hat est l'hôte de nombreuses listes de diffusion traitant de ses logiciels et technologies. Vous trouverez un ensemble des listes de diffusion disponibles au public sur <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Cliquez sur le nom d'une liste pour vous inscrire à celle-ci ou pour accéder à ses archives."
 
 #. Tag: title
 #, no-c-format
@@ -63,7 +63,7 @@ msgstr "Vos commentaires sont importants&nbsp;!"
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>feedback</primary> <secondary>contact information for this manual</secondary>"
-msgstr ""
+msgstr "<primary>feedback</primary> <secondary>informations de contact de ce manuel</secondary>"
 
 #. Tag: para
 #, no-c-format
@@ -71,38 +71,11 @@ msgid "If you find a typographical error in this manual, or if you have thought 
 msgstr "Si vous trouvez des fautes de frappe ou si vous avez des suggestions pour améliorer ce manuel, n'hésitez surtout pas à nous en faire part&nbsp;! Veuillez envoyer vos remarques par l'entremise de Bugzilla (<ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink>) pour le produit <application>&PRODUCT;.</application>"
 
 #. Tag: para
-#, no-c-format
-msgid "When submitting a bug report, be sure to mention the manual&#39;s identifier: <citetitle>&BOOKID;</citetitle>"
+#, fuzzy, no-c-format
+msgid "When submitting a bug report, be sure to mention the manual's identifier: <citetitle>&BOOKID;</citetitle>"
 msgstr "Lorsque vous soumettez un rapport de bogues, veuillez indiquer clairement les références du manuel&nbsp;: <citetitle>&BOOKID;</citetitle>"
 
 #. Tag: para
 #, no-c-format
 msgid "If you have a suggestion for improving the documentation, try to be as specific as possible when describing it. If you have found an error, please include the section number and some of the surrounding text so we can find it easily."
 msgstr "Si vous avez des suggestions pour améliorer la documentation, essayez de les décrire le plus précisément possible. Si vous avez trouvé une erreur, veuillez non seulement indiquer le numéro de section où elle se trouve mais également ajouter un extrait du texte qui l'entoure, afin que nous puissions la retrouver facilement."
-
-#~ msgid "help"
-#~ msgstr "aide"
-
-#~ msgid "getting help"
-#~ msgstr "obtenir de l'aide"
-
-#~ msgid "Red Hat Knowledgebase"
-#~ msgstr "Base de connaissances Red Hat"
-
-#~ msgid "Visit the Red Hat Knowledgebase at <ulink url=\"http://kbase.redhat.com\"></ulink> to search or browse through technical support articles about Red Hat products."
-#~ msgstr "Visitez la base de connaissances Red Hat à <ulink url=\"http://kbase.redhat.com\"></ulink> pour chercher ou pour avoir un aperçu des articles sur le support technique des produits Red Hat."
-
-#~ msgid "Your Red Hat subscription entitles you to support from Red Hat Global Support Services (GSS). Visit <ulink url=\"http://support.redhat.com\"></ulink> for more information about obtaining help from GSS."
-#~ msgstr "Votre abonnement Red Hat vous donne permet d'avoir accès au service de support global de Red Hat (GSS). Visitez <ulink url=\"http://support.redhat.com\"></ulink> pour avoir plus d'information sur l'obtention d'aide de la part de GSS."
-
-#~ msgid "Access other Red Hat documentation at <ulink url=\"http://www.redhat.com/docs\"></ulink>"
-#~ msgstr "Accédez aux autres documents de Red Hat sur <ulink url=\"http://www.redhat.com/docs\"></ulink>"
-
-#~ msgid "Red Hat electronic mailing lists"
-#~ msgstr "Listes de diffusion de Red Hat"
-
-#~ msgid "feedback"
-#~ msgstr "commentaires"
-
-#~ msgid "contact information for this manual"
-#~ msgstr "coordonnées pour ce manuel"
