--- a/publican-redhat/gu-IN/Feedback.po
+++ b/publican-redhat/gu-IN/Feedback.po
@@ -5,8 +5,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-08-06T02:45:30\n"
-"PO-Revision-Date: 2010-03-03 12:15+0530\n"
+"POT-Creation-Date: 2010-10-07T06:03:52\n"
+"PO-Revision-Date: 2010-09-01 11:27+0530\n"
 "Last-Translator: Sweta Kothari <swkothar@redhat.com>\n"
 "Language-Team: Gujarati\n"
 "Language: \n"
@@ -30,32 +30,32 @@ msgstr "શું તમારે મદદની જરૂર છે?"
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>help</primary> <secondary>getting help</secondary>"
-msgstr ""
+msgstr "<primary>મદદ</primary> <secondary>મદદ મળી રહી છે</secondary>"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <ulink url=\"http://access.redhat.com\" />. Through the customer portal, you can:"
-msgstr "જો તમને આ દસ્તાવેજીકરણમાં વર્ણવેલ પ્રક્રિયા સાથએ મુશ્કેલી અનુભવો તો, તમે નીચેનાં રસ્તાઓમાં મદદને શોધી શકો છો:"
+msgstr "જો તમને આ દસ્તાવેજીકરણમાં વર્ણવેલ પ્રક્રિયા સાથે મુશ્કેલી અનુભવો તો, <ulink url=\"http://access.redhat.com\" /> પર Red Hat કસ્ટમર પોર્ટલની મુલાકાત લો. કસ્ટમર પોર્ટલ મારફતે, તમે કરી શકો છો:"
 
 #. Tag: para
 #, no-c-format
 msgid "search or browse through a knowledgebase of technical support articles about Red Hat products."
-msgstr ""
+msgstr "Red Hat પ્રોડક્ટો વિશે ટૅકનિકલ આધાર લેખોના નૉલેજબેસ મારફતે શોધો અથવા બ્રાઉઝ કરો."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "submit a support case to Red Hat Global Support Services (GSS)."
-msgstr "Red Hat Global Support Services"
+msgstr "Red Hat Global Support Services (GSS) માં આધાર સ્થિતિને ઉમેરો."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "access other product documentation."
-msgstr "બીજુ Red Hat દસ્તાવેજીકરણ"
+msgstr "બીજા પ્રોડક્ટ દસ્તાવેજીકરણમા પ્રવેશ કરો."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Click on the name of any mailing list to subscribe to that list or to access the list archives."
-msgstr "Red Hat સોફ્ટવેર અને ટૅકનોલોજીની ચર્ચા માટે ઇલેક્ટ્રોનિક મેઇલિંગ યાદીઓની વિશાળ સંખ્યાને યજમાનિત કરે છે. તમે <ulink url=\"https://www.redhat.com/mailman/listinfo\"></ulink> પર સાર્વરજનિક ઉપલ્બધ યાદીઓની યાદીને શોધી શકો છો. તે યાદીનું ઉમેદવારી કરવા માટે અથવા જૂની યાદીમાં પ્રવેશ કરવા માટે કોઇપણ યાદીનાં નામ પર ક્લિક કરો."
+msgstr "Red Hat સોફ્ટવેર અને ટૅકનોલોજીની ચર્ચા માટે ઇલેક્ટ્રોનિક મેઇલિંગ યાદીઓની વિશાળ સંખ્યાને યજમાનિત કરે છે. તમે <ulink url=\"https://www.redhat.com/mailman/listinfo\"></ulink> પર સાર્વજનિક ઉપલબ્ધ યાદીઓની યાદીને શોધી શકો છો. તે યાદીનું ઉમેદવારી કરવા માટે અથવા જૂની યાદીમાં પ્રવેશ કરવા માટે કોઇપણ યાદીનાં નામ પર ક્લિક કરો."
 
 #. Tag: title
 #, no-c-format
@@ -65,7 +65,7 @@ msgstr "અમને અભિપ્રાયની જરૂર છે!"
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>feedback</primary> <secondary>contact information for this manual</secondary>"
-msgstr ""
+msgstr "<primary>ફીડબૅક</primary> <secondary>આ પુસ્તિકા માટે જાણકારીનો સંપર્ક કરો</secondary>"
 
 #. Tag: para
 #, no-c-format
@@ -73,38 +73,11 @@ msgid "If you find a typographical error in this manual, or if you have thought 
 msgstr "જો તમને આ માર્ગદર્શિકામાં લખાણને લગતી ભૂલ મળે, કે જો તમે આ માર્ગદર્શિકાને વધુ સારી બનાવવાનો વિચાર આવે, તો અમને તમારા તરફથી સાંભળવામાં ખુશી થશે! મહેરબાની કરીને બગઝીલ્લામાં અહેવાલ જમા કરો: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> આગળ <application>&PRODUCT;.</application> ઉત્પાદન વિરુદ્ધ"
 
 #. Tag: para
-#, no-c-format
-msgid "When submitting a bug report, be sure to mention the manual&#39;s identifier: <citetitle>&BOOKID;</citetitle>"
+#, fuzzy, no-c-format
+msgid "When submitting a bug report, be sure to mention the manual's identifier: <citetitle>&BOOKID;</citetitle>"
 msgstr "જ્યારે ભૂલનો અહેવાલ જમા કરી રહ્યા હોય, ત્યારે માર્ગદર્શિકા&#39; ના ઓળખાવનારનું સૂચન કરવાનું ભૂલશો નહિં: <citetitle>&BOOKID;</citetitle>"
 
 #. Tag: para
 #, no-c-format
 msgid "If you have a suggestion for improving the documentation, try to be as specific as possible when describing it. If you have found an error, please include the section number and some of the surrounding text so we can find it easily."
 msgstr "જો તમારી પાસે આ દસ્તાવેજ સુધારવાનું સૂચન હોય, તો તેનું વર્ણન કરતી વખતે શક્ય હોય એટલું વધુ ચોક્કસ બનવાનો પ્રયાસ કરો. જો તમને ભૂલ મળી આવે, તો મહેરબાની કરીને વિભાગ નંબર અને આસપાસના અમુક લખાણનો સમાવેશ કરો કે જેથી અમે તેને સરળતાથી શોધી શકીએ."
-
-#~ msgid "help"
-#~ msgstr "મદદ"
-
-#~ msgid "getting help"
-#~ msgstr "મદદને મેળવી રહ્યા છે"
-
-#~ msgid "Red Hat Knowledgebase"
-#~ msgstr "Red Hat Knowledgebase"
-
-#~ msgid "Visit the Red Hat Knowledgebase at <ulink url=\"http://kbase.redhat.com\"></ulink> to search or browse through technical support articles about Red Hat products."
-#~ msgstr "શોધવા માટે <ulink url=\"http://kbase.redhat.com\"></ulink> પર Red Hat Knowledgebase ની મુલાકાત લો અને Red Hat પ્રોડક્ટો વિશે ટેકનિકલ આધાર લેખો મારફતે બ્રાઉઝ કરો."
-
-#~ msgid "Your Red Hat subscription entitles you to support from Red Hat Global Support Services (GSS). Visit <ulink url=\"http://support.redhat.com\"></ulink> for more information about obtaining help from GSS."
-#~ msgstr "Red Hat Global Support Services (GSS) માંથી આધાર માટે તમારાં Red Hat ઉમેદવારી પુસ્તકો. GSS માંથી મદદને પ્રાપ્ત કરવા વિશે વધારે જાણકારી માટે <ulink url=\"http://support.redhat.com\"></ulink> ની મુલાકાત લો."
-
-#~ msgid "Access other Red Hat documentation at <ulink url=\"http://www.redhat.com/docs\"></ulink>"
-#~ msgstr "<ulink url=\"http://www.redhat.com/docs\"></ulink> પર બીજા Red Hat દસ્તાવેજીકરણને પ્રવેશો"
-
-#~ msgid "Red Hat electronic mailing lists"
-#~ msgstr "Red Hat ઇલેક્ટ્રોનિક મેઇલિંગ યાદી"
-
-#~ msgid "feedback"
-#~ msgstr "અભિપ્રાય"
-
-#~ msgid "contact information for this manual"
-#~ msgstr "આ માર્ગદર્શિકા માટેની સંપર્ક જાણકારી"
