--- a/publican-redhat/kn-IN/Feedback.po
+++ b/publican-redhat/kn-IN/Feedback.po
@@ -4,10 +4,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-08-06T02:45:30\n"
-"PO-Revision-Date: 2010-03-02 13:01+0530\n"
+"POT-Creation-Date: 2010-10-07T06:03:52\n"
+"PO-Revision-Date: 2010-08-31 13:04+0530\n"
 "Last-Translator: Shankar Prasad <svenkate@redhat.com>\n"
-"Language-Team: kn-IN <>\n"
+"Language-Team: American English <kde-i18n-doc@kde.org>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -28,32 +28,32 @@ msgstr "ನಿಮಗೆ ನೆರವು ಬೇಕಿದೆಯೆ?"
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>help</primary> <secondary>getting help</secondary>"
-msgstr ""
+msgstr "<primary>ನೆರವು</primary> <secondary>ನೆರವನ್ನು ಪಡೆಯುವಿಕೆ</secondary>"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <ulink url=\"http://access.redhat.com\" />. Through the customer portal, you can:"
-msgstr "ಈ ದಸ್ತಾವೇಜಿನಲ್ಲಿ ವಿವರಿಸಲಾದ ವಿಧಾನವನ್ನು ಅನುಸರಿಸಲು ನಿಮಗೆ ತೊಂದರೆ ಕಷ್ಟವೆನಿಸಿದರೆ, ಈ ಕೆಳಗಿನ ವಿಧಾನದಲ್ಲಿ ನೀವು ನೆರವನ್ನು ಪಡೆದುಕೊಳ್ಳಬಹುದು:"
+msgstr "ಈ ದಸ್ತಾವೇಜಿನಲ್ಲಿ ವಿವರಿಸಲಾದ ವಿಧಾನವನ್ನು ಅನುಸರಿಸಲು ನಿಮಗೆ ಕಷ್ಟವೆನಿಸಿದಲ್ಲಿ, <ulink url=\"http://access.redhat.com\" /> ನಲ್ಲಿನ Red Hat ಗ್ರಾಹಕರ ಜಾಲತಾಣವನ್ನು ನೋಡಿ. ಗ್ರಾಹಕರ ತಾಣದಿಂದ ನೀವು:"
 
 #. Tag: para
 #, no-c-format
 msgid "search or browse through a knowledgebase of technical support articles about Red Hat products."
-msgstr ""
+msgstr "Red Hat ಉತ್ಪನ್ನಗಳ ತಾಂತ್ರಿಕ ಬೆಂಬಲದ ಬಗೆಗಿನ ಲೇಖನಗಳನ್ನು ಹುಡುಕಲು ಹಾಗು ನೋಡಲು ಜ್ಞಾನ ಕೇಂದ್ರಕ್ಕೆ ಭೇಟಿಕೊಡಬಹುದು."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "submit a support case to Red Hat Global Support Services (GSS)."
-msgstr "Red Hat ಗ್ಲೋಬಲ್ ಸಪೋರ್ಟ್ ಸರ್ವಿಸಸ್"
+msgstr "Red Hat ಗ್ಲೋಬಲ್ ಸಪೋರ್ಟ್ ಸರ್ವಿಸಸ್‌ಗೆ ಒಂದು ಬೆಂಬಲದ ಪ್ರಕರಣವನ್ನು (ಕೇಸ್) ಸಲ್ಲಿಸಬಹುದು."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "access other product documentation."
-msgstr "ಇತರೆ Red Hat ದಸ್ತಾವೇಜು"
+msgstr "ಇತರೆ ಉತ್ಪನ್ನ ದಸ್ತಾವೇಜುಗಳನ್ನು ನಿಲುಕಿಸಿಕೊಳ್ಳಬಹುದು."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Click on the name of any mailing list to subscribe to that list or to access the list archives."
-msgstr "Red Hat ತಂತ್ರಾಂಶ ಹಾಗು ತಂತ್ರಜ್ಞಾನದ ಬಗೆಗಿನ ಚರ್ಚೆಗಾಗಿ Red Hat ದೊಡ್ಡ ಸಂಖ್ಯೆಯಲ್ಲಿ ವಿದ್ಯುನ್ಮಾನ(ಇಲೆಕ್ಟ್ರಾನಿಕ್) ಮೈಲಿಂಗ್ ಲಿಸ್ಟುಗಳನ್ನು ಹೊಂದಿರುತ್ತದೆ. ಸಾರ್ವಜನಿಕವಾಗಿ ಲಭ್ಯವಿರುವ ಲಿಸ್ಟುಗಳನ್ನು ನೀವು <ulink url=\"https://www.redhat.com/mailman/listinfo\"></ulink> ಎಂಬಲ್ಲಿ ನೋಡಬಹುದಾಗಿದೆ. ಯಾವುದೆ ಲಿಸ್ಟಿಗೆ ಚಂದಾದಾರರಾಗಲು ಅಥವ ಲಿಸ್ಟಿನ ಆರ್ಕೈವುಗಳನ್ನು ನೋಡಲು ಆ ಲಿಸ್ಟಿನ ಮೇಲೆ ಕ್ಲಿಕ್ ಮಾಡಿ."
+msgstr "Red Hat ತಂತ್ರಾಂಶ ಹಾಗು ತಂತ್ರಜ್ಞಾನದ ಚರ್ಚೆಗಾಗಿ Red Hat ದೊಡ್ಡ ಸಂಖ್ಯೆಯಲ್ಲಿ ವಿದ್ಯುನ್ಮಾನ(ಇಲೆಕ್ಟ್ರಾನಿಕ್) ಮೈಲಿಂಗ್ ಲಿಸ್ಟುಗಳನ್ನೂ ಸಹ ಹೊಂದಿರುತ್ತದೆ. ಸಾರ್ವಜನಿಕವಾಗಿ ಲಭ್ಯವಿರುವ ಮೈಲಿಂಗ್ ಲಿಸ್ಟುಗಳನ್ನು ನೀವು <ulink url=\"https://www.redhat.com/mailman/listinfo\" / > ಎಂಬಲ್ಲಿ ನೋಡಬಹುದಾಗಿದೆ. ಯಾವುದೆ ಮೈಲಿಂಗ್ ಲಿಸ್ಟಿಗೆ ಚಂದಾದಾರರಾಗಲು ಅಥವ ಲಿಸ್ಟಿನ ಆರ್ಕೈವುಗಳನ್ನು ನೋಡಲು ಆ ಲಿಸ್ಟಿನ ಮೇಲೆ ಕ್ಲಿಕ್ ಮಾಡಿ."
 
 #. Tag: title
 #, no-c-format
@@ -63,7 +63,7 @@ msgstr "ನಮಗೆ ನಿಮ್ಮ ಅಭಿಪ್ರಾಯದ ಅಗತ್ಯ
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>feedback</primary> <secondary>contact information for this manual</secondary>"
-msgstr ""
+msgstr "<primary>ಅಭಿಪ್ರಾಯ</primary> <secondary>ಈ ಕೈಪಿಡಿಗಾಗಿನ ಸಂಪರ್ಕ ಮಾಹಿತಿ</secondary>"
 
 #. Tag: para
 #, no-c-format
@@ -71,8 +71,8 @@ msgid "If you find a typographical error in this manual, or if you have thought 
 msgstr "ಈ ಕೈಪಿಡಿಯಲ್ಲಿ ನಿಮಗೆ ಬೆರಳಚ್ಚು ದೋಷ ಕಂಡು ಬಂದರೆ, ಅಥವ ಈ ಕೈಪಿಡಿಯನ್ನು ಇನ್ನಷ್ಟು ಉತ್ತಮಗೊಳಿಸಲು ನಿಮ್ಮಲ್ಲಿ ಸಲಹೆಗಳಿದ್ದರೆ, ನಾವು ಅದನ್ನು ತಿಳಿಯಲು ಉತ್ಸುಕರಾಗಿದ್ದೇವೆ! ದಯವಿಟ್ಟು ಬಗ್-ಝಿಲ್ಲಾದಲ್ಲಿ : <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> ನಲ್ಲಿನ <application>&PRODUCT;.</application> ನಲ್ಲಿ ಒಂದು ವರದಿಯನ್ನು ಸಲ್ಲಿಸಿ."
 
 #. Tag: para
-#, no-c-format
-msgid "When submitting a bug report, be sure to mention the manual&#39;s identifier: <citetitle>&BOOKID;</citetitle>"
+#, fuzzy, no-c-format
+msgid "When submitting a bug report, be sure to mention the manual's identifier: <citetitle>&BOOKID;</citetitle>"
 msgstr "ಒಂದು ದೋಷ ವರದಿಯನ್ನು ಸಲ್ಲಿಸುವಾಗ, ಕೈಪಿಡಿಯ &#39;s ಐಡೆಂಟಿಫಯರನ್ನು ನಮೂದಿಸುವುದನ್ನು ಮರೆಯಬೇಡಿ: <citetitle>&BOOKID;</citetitle>"
 
 #. Tag: para
