--- a/publican-redhat/pt-BR/Feedback.po
+++ b/publican-redhat/pt-BR/Feedback.po
@@ -1,14 +1,14 @@
-# translation of Feedback.po to Portuguese
+# translation of Feedback.po to
 # Leticia de Lima <ldelima@redhat.com>, 2007.
 # Glaucia Cintra <gcintra@redhat.com>, 2010.
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-08-06T02:45:30\n"
-"PO-Revision-Date: 2010-03-01 16:27+1000\n"
-"Last-Translator: Glaucia Cintra <gcintra@redhat.com>\n"
-"Language-Team: Portuguese <en@li.org>\n"
+"POT-Creation-Date: 2010-10-07T06:03:52\n"
+"PO-Revision-Date: 2010-08-23 12:28+1000\n"
+"Last-Translator: \n"
+"Language-Team:  <en@li.org>\n"
 "Language: pt\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -28,32 +28,32 @@ msgstr "Você precisa de ajuda?"
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>help</primary> <secondary>getting help</secondary>"
-msgstr ""
+msgstr "<primary>ajuda</primary> <secondary>obtendo ajuda</secondary>"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <ulink url=\"http://access.redhat.com\" />. Through the customer portal, you can:"
-msgstr "Se encontrar dificuldades com o procedimento descrito nesta documentação, você pode encontrar ajuda das seguintes formas:"
+msgstr "Se encontrar dificuldades com o procedimento descrito nesta documentação, você pode encontrar ajuda visitando o Portal do Cliente da Red Hat em <ulink url=\"http://access.redhat.com\" />. Você poderá realizar o seguinte através do portal do cliente:"
 
 #. Tag: para
 #, no-c-format
 msgid "search or browse through a knowledgebase of technical support articles about Red Hat products."
-msgstr ""
+msgstr "realize buscas ou navegue através da base de conhecimento dos artigos de suporte técnico sobre os produtos da Red Hat."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "submit a support case to Red Hat Global Support Services (GSS)."
-msgstr "Serviços de Suporte Global da Red Hat"
+msgstr "insira o caso de suporte nos Serviços de Suporte Global da Red Hat (GSS)."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "access other product documentation."
-msgstr "Outras documentações da Red Hat"
+msgstr "acesso a outra documentação da Red Hat."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Click on the name of any mailing list to subscribe to that list or to access the list archives."
-msgstr "A Red Hat acomoda um grande número de listas de correio eletrônico para discussão de software e tecnologias da Red Hat. Você pode encontrar uma lista contendo as listas públicas disponíveis em <ulink url=\"https://www.redhat.com/mailman/listinfo\"></ulink>. Clique no nome de qualquer lista para subscrever àquela lista ou acessar o histórico das listas."
+msgstr "A Red Hat acomoda um grande número de listas de correio eletrônico para discussão de software e tecnologias da Red Hat. Você pode encontrar uma lista contendo as listas públicas disponíveis em <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Clique no nome de qualquer lista para subscrever àquela lista ou acessar o histórico das listas."
 
 #. Tag: title
 #, no-c-format
@@ -63,7 +63,7 @@ msgstr "Nós precisamos do seu Comentário!"
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>feedback</primary> <secondary>contact information for this manual</secondary>"
-msgstr ""
+msgstr "<primary>comentário</primary> <secondary>informação de contato para este manual</secondary>"
 
 #. Tag: para
 #, no-c-format
@@ -71,38 +71,11 @@ msgid "If you find a typographical error in this manual, or if you have thought 
 msgstr "Se você encontrar erro ortográfico neste manual, ou se você tem uma sugestão para melhoramento deste manual, nós gostaríamos muito de ouvir sua opinião! Por favor submita um relatório em Bugzilla:<ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> contra o produto <application>&PRODUCT;.</application>."
 
 #. Tag: para
-#, no-c-format
-msgid "When submitting a bug report, be sure to mention the manual&#39;s identifier: <citetitle>&BOOKID;</citetitle>"
+#, fuzzy, no-c-format
+msgid "When submitting a bug report, be sure to mention the manual's identifier: <citetitle>&BOOKID;</citetitle>"
 msgstr "Ao submeter um relatório de erro, certifique-se de mencionar a identificação do manual:<citetitle>&BOOKID;</citetitle>."
 
 #. Tag: para
 #, no-c-format
 msgid "If you have a suggestion for improving the documentation, try to be as specific as possible when describing it. If you have found an error, please include the section number and some of the surrounding text so we can find it easily."
 msgstr "Se você tiver uma sugestão para o melhoramento deste documento, por favor tente ser o mais específico possível em sua descrição. Caso você tenha encontrado um erro, por favor inclua o número da seção e alguns detalhes a respeito do texto para a nossa melhor identificação."
-
-#~ msgid "help"
-#~ msgstr "ajuda"
-
-#~ msgid "getting help"
-#~ msgstr "obtendo ajuda"
-
-#~ msgid "Red Hat Knowledgebase"
-#~ msgstr "Red Hat Knowledgebase"
-
-#~ msgid "Visit the Red Hat Knowledgebase at <ulink url=\"http://kbase.redhat.com\"></ulink> to search or browse through technical support articles about Red Hat products."
-#~ msgstr "Visite o Red Hat Knowledgebase em <ulink url=\"http://kbase.redhat.com\"></ulink> para procurar ou navegar pelos artigos sobre suporte técnico dos produtos da Red Hat."
-
-#~ msgid "Your Red Hat subscription entitles you to support from Red Hat Global Support Services (GSS). Visit <ulink url=\"http://support.redhat.com\"></ulink> for more information about obtaining help from GSS."
-#~ msgstr "Sua subscrição da Red Hat lhe dá o direito de suporte do Serviço de Suporte Global da Red Hat (GSS). Visite <ulink url=\"http://support.redhat.com\"></ulink> para mais informações sobre como obter ajuda do GSS."
-
-#~ msgid "Access other Red Hat documentation at <ulink url=\"http://www.redhat.com/docs\"></ulink>"
-#~ msgstr "Acesse outras documentações da Red Hat em <ulink url=\"http://www.redhat.com/docs\"></ulink>"
-
-#~ msgid "Red Hat electronic mailing lists"
-#~ msgstr "Listas de correio eletrônico da Red Hat"
-
-#~ msgid "feedback"
-#~ msgstr "comentário"
-
-#~ msgid "contact information for this manual"
-#~ msgstr "contato de informação para este manual"
