--- a/publican-redhat/ru-RU/Feedback.po
+++ b/publican-redhat/ru-RU/Feedback.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-08-06T02:45:30\n"
-"PO-Revision-Date: 2010-03-01 16:05+1100\n"
+"POT-Creation-Date: 2010-10-07T06:03:52\n"
+"PO-Revision-Date: 2010-08-23 12:07+1000\n"
 "Last-Translator: Yulia <ypoyarko@redhat.com>\n"
 "Language-Team: Russian\n"
 "Language: \n"
@@ -31,32 +31,32 @@ msgstr "Нужна помощь?"
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>help</primary> <secondary>getting help</secondary>"
-msgstr ""
+msgstr "<primary>помощь</primary> <secondary>получение помощи</secondary>"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <ulink url=\"http://access.redhat.com\" />. Through the customer portal, you can:"
-msgstr "Если вы столкнулись с проблемами при выполнении действий, описанных в этом документе, помощь можно получить следующим образом:"
+msgstr "Если вы столкнулись с проблемами при выполнении инструкций, описанных в этом документе, помощь можно получить через портал пользователей Red Hat (<ulink url=\"http://access.redhat.com\" />). Там вы сможете:"
 
 #. Tag: para
 #, no-c-format
 msgid "search or browse through a knowledgebase of technical support articles about Red Hat products."
-msgstr ""
+msgstr "выполнить поиск или просмотреть технические статьи в базе знаний продуктов Red Hat;"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "submit a support case to Red Hat Global Support Services (GSS)."
-msgstr "Глобальная служба поддержки Red Hat"
+msgstr "отправить запрос в службу глобальной поддержки Red Hat;"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "access other product documentation."
-msgstr "Другая документация Red Hat"
+msgstr "получить доступ к другой официальной документации."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Click on the name of any mailing list to subscribe to that list or to access the list archives."
-msgstr "Существует множество почтовых рассылок Red Hat на разные темы, включая программное обеспечение и обсуждение технологий. Полный список можно найти по адресу <ulink url=\"https://www.redhat.com/mailman/listinfo\"></ulink>. Чтобы просмотреть информацию об интересующей рассылке и подписаться, нажмите на ее названии."
+msgstr "Существует множество почтовых рассылок Red Hat на разные темы, включая программное обеспечение и обсуждение технологий. Полный список можно найти по адресу <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Чтобы просмотреть информацию об интересующей рассылке и подписаться на нее, нажмите на ее названии."
 
 #. Tag: title
 #, no-c-format
@@ -66,46 +66,19 @@ msgstr "Нам нужны ваши отзывы!"
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>feedback</primary> <secondary>contact information for this manual</secondary>"
-msgstr ""
+msgstr "<primary>отзывы</primary> <secondary>контактная информация</secondary>"
 
 #. Tag: para
 #, no-c-format
 msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product <application>&PRODUCT;.</application>"
-msgstr "Если вы нашли опечатку в этом руководстве или у вас есть предложения по его усовершенствованию, мы будем рады вас выслушать. Пожалуйста, создайте запрос в   Bugzilla по адресу <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink>, выбрав компонент <application>&PRODUCT;.</application>"
+msgstr "Если вы нашли опечатку в этом руководстве или у вас есть предложения по его усовершенствованию, мы хотели бы об этом узнать. Создайте запрос в Bugzilla по адресу <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink>, выбрав компонент <application>&PRODUCT;.</application>"
 
 #. Tag: para
-#, no-c-format
-msgid "When submitting a bug report, be sure to mention the manual&#39;s identifier: <citetitle>&BOOKID;</citetitle>"
+#, fuzzy, no-c-format
+msgid "When submitting a bug report, be sure to mention the manual's identifier: <citetitle>&BOOKID;</citetitle>"
 msgstr "Не забудьте указать в запросе идентификатор данного руководства: <citetitle>&BOOKID;</citetitle>."
 
 #. Tag: para
 #, no-c-format
 msgid "If you have a suggestion for improving the documentation, try to be as specific as possible when describing it. If you have found an error, please include the section number and some of the surrounding text so we can find it easily."
-msgstr "Если у вас есть предложения по улучшению этого руководства, постарайтесь описать их как можно подробнее. Если же вы нашли ошибку, пожалуйста, укажите номер раздела и окружающий текст, чтобы мы могли быстро ее найти."
-
-#~ msgid "help"
-#~ msgstr "помощь"
-
-#~ msgid "getting help"
-#~ msgstr "получение помощи"
-
-#~ msgid "Red Hat Knowledgebase"
-#~ msgstr "База знаний Red Hat"
-
-#~ msgid "Visit the Red Hat Knowledgebase at <ulink url=\"http://kbase.redhat.com\"></ulink> to search or browse through technical support articles about Red Hat products."
-#~ msgstr "В базе знаний Red Hat по адресу <ulink url=\"http://kbase.redhat.com\"></ulink> можно получить информацию и найти технические статьи о продуктах Red Hat."
-
-#~ msgid "Your Red Hat subscription entitles you to support from Red Hat Global Support Services (GSS). Visit <ulink url=\"http://support.redhat.com\"></ulink> for more information about obtaining help from GSS."
-#~ msgstr "Наличие подписки Red Hat гарантирует получение помощи от глобальной службы поддержки Red Hat. Подробную информацию можно найти на сайте <ulink url=\"http://support.redhat.com\"></ulink>."
-
-#~ msgid "Access other Red Hat documentation at <ulink url=\"http://www.redhat.com/docs\"></ulink>"
-#~ msgstr "Документацию Red Hat можно найти по адресу <ulink url=\"http://www.redhat.com/docs\"></ulink>."
-
-#~ msgid "Red Hat electronic mailing lists"
-#~ msgstr "Списки рассылок Red Hat"
-
-#~ msgid "feedback"
-#~ msgstr "обратная связь"
-
-#~ msgid "contact information for this manual"
-#~ msgstr "контактная информация для этого руководства"
+msgstr "Если у вас есть предложения по улучшению этого руководства, постарайтесь описать их как можно подробнее. Если же вы нашли ошибку, пожалуйста, укажите номер раздела и окружающий текст для облегчения ее идентификации."
