--- a/publican-redhat/zh-TW/Feedback.po
+++ b/publican-redhat/zh-TW/Feedback.po
@@ -1,14 +1,14 @@
-# translation of Feedback.po to Traditional Chinese
+# translation of Feedback.po to
 # Terry Chuang <terry.chuang@redhat.com>, 2007.
 # Chester Cheng <ccheng@紅帽子>, 2010.
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-08-06T02:45:30\n"
-"PO-Revision-Date: 2010-03-01 12:41+1000\n"
-"Last-Translator: Chester Cheng <ccheng@紅帽子>\n"
-"Language-Team: Traditional Chinese <zh_TW@li.org>\n"
+"POT-Creation-Date: 2010-10-07T06:03:52\n"
+"PO-Revision-Date: 2010-08-23 11:36+1000\n"
+"Last-Translator: \n"
+"Language-Team:  <zh@li.org>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -28,32 +28,32 @@ msgstr "需要幫助嗎？"
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>help</primary> <secondary>getting help</secondary>"
-msgstr ""
+msgstr "<primary>說明</primary> <secondary>取得協助</secondary>"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <ulink url=\"http://access.redhat.com\" />. Through the customer portal, you can:"
-msgstr "如果您無法進行本文所述之步驟，可採取下列步驟："
+msgstr "如果您無法進行本文件中所描述的步驟，請參閱 Red Hat Customer Portal 於 <ulink url=\"http://access.redhat.com\" />。您可透過此客戶端頻道來進行以下動作："
 
 #. Tag: para
 #, no-c-format
 msgid "search or browse through a knowledgebase of technical support articles about Red Hat products."
-msgstr ""
+msgstr "搜尋或瀏覽有關於 Red Hat 產品的技術支援文件知識庫。"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "submit a support case to Red Hat Global Support Services (GSS)."
-msgstr "Red Hat 全球支援服務"
+msgstr "提交支援案例至 Red Hat 全球支援服務（GSS）。"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "access other product documentation."
-msgstr "其它 Red Hat 文件"
+msgstr "存取其它產品的文件。"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Click on the name of any mailing list to subscribe to that list or to access the list archives."
-msgstr "Red Hat 有許多電子郵件論壇，討論 Red Hat 的軟體與技術。您可以從公開的 <ulink url=\"https://www.redhat.com/mailman/listinfo\"></ulink> 找到這些論壇。按下郵件論壇的名稱後，您可以選擇訂閱或檢視過去的紀錄。"
+msgstr "Red Hat 擁有許多電子郵件清單，以討論 Red Hat 的軟體與技術。您可以藉由 <ulink url=\"https://www.redhat.com/mailman/listinfo\" /> 找到公開的郵件清單。請按下郵件清單的名稱，以選擇訂閱或檢視過去的清單紀錄。"
 
 #. Tag: title
 #, no-c-format
@@ -63,46 +63,19 @@ msgstr "我們需要您的意見！"
 #. Tag: indexterm
 #, no-c-format
 msgid "<primary>feedback</primary> <secondary>contact information for this manual</secondary>"
-msgstr ""
+msgstr "<primary>意見</primary> <secondary>本指南的聯絡資訊</secondary>"
 
 #. Tag: para
 #, no-c-format
 msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product <application>&PRODUCT;.</application>"
-msgstr "若您在本指南中發現印刷上的錯誤，或有讓本指南改進的方式，我們將誠摯歡迎您和我們取得聯繫！請在 Bugzilla 中對於 <application>&PRODUCT;.</application> 這個產品提交您的報表：<ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink>。"
+msgstr "若您在本指南中發現印刷上的錯誤，或有讓本指南改進的方式，我們將誠摯歡迎您和我們取得聯繫！請在 Bugzilla 中針對於 <application>&PRODUCT;.</application> 這個產品提交您的回報：<ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink>。"
 
 #. Tag: para
-#, no-c-format
-msgid "When submitting a bug report, be sure to mention the manual&#39;s identifier: <citetitle>&BOOKID;</citetitle>"
+#, fuzzy, no-c-format
+msgid "When submitting a bug report, be sure to mention the manual's identifier: <citetitle>&BOOKID;</citetitle>"
 msgstr "當您提交錯誤報告時，請務必提供指南的識別碼：<citetitle>&BOOKID;</citetitle>"
 
 #. Tag: para
 #, no-c-format
 msgid "If you have a suggestion for improving the documentation, try to be as specific as possible when describing it. If you have found an error, please include the section number and some of the surrounding text so we can find it easily."
 msgstr "若您擁有改善文件的建議，請儘可能地將它詳細描述清楚。若您您發現錯誤的話，請包含區段編號以及該錯誤周圍的部分文字，如此一來我們便能輕易地找到該錯誤。"
-
-#~ msgid "help"
-#~ msgstr "幫助"
-
-#~ msgid "getting help"
-#~ msgstr "取得幫助"
-
-#~ msgid "Red Hat Knowledgebase"
-#~ msgstr "Red Hat 知識庫"
-
-#~ msgid "Visit the Red Hat Knowledgebase at <ulink url=\"http://kbase.redhat.com\"></ulink> to search or browse through technical support articles about Red Hat products."
-#~ msgstr "參閱 Red Hat 知識庫，搜尋或瀏覽 Red Hat 產品的技術服務文章，網址是 <ulink url=\"http://kbase.redhat.com\"></ulink>。"
-
-#~ msgid "Your Red Hat subscription entitles you to support from Red Hat Global Support Services (GSS). Visit <ulink url=\"http://support.redhat.com\"></ulink> for more information about obtaining help from GSS."
-#~ msgstr "Red Hat 訂閱服務能讓您從 Red Hat 的全球支援服務（GSS，Global Support Services）取得支援。詳情請參閱 <ulink url=\"http://support.redhat.com\"></ulink>。"
-
-#~ msgid "Access other Red Hat documentation at <ulink url=\"http://www.redhat.com/docs\"></ulink>"
-#~ msgstr "從 <ulink url=\"http://www.redhat.com/docs\"></ulink> 取得其它 Red Hat 的文件。"
-
-#~ msgid "Red Hat electronic mailing lists"
-#~ msgstr "Red Hat 郵件論壇"
-
-#~ msgid "feedback"
-#~ msgstr "意見"
-
-#~ msgid "contact information for this manual"
-#~ msgstr "本指南的連絡人資訊"
