--- a/publican-jboss/or-IN/Feedback.po
+++ b/publican-jboss/or-IN/Feedback.po
@@ -4,10 +4,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2008-10-14 00:06+0000\n"
+"POT-Creation-Date: 2010-10-08T02:39:25\n"
 "PO-Revision-Date: 2007-11-06 18:13+0530\n"
 "Last-Translator: Subhransu Behera <arya_subhransu@yahoo.co.in>\n"
 "Language-Team: Oriya <oriya-group@lists.sarovar.org>\n"
+"Language: or\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -17,62 +18,35 @@ msgstr ""
 "\n"
 
 #. Tag: title
-#: Feedback.xml:6
 #, no-c-format
 msgid "We Need Feedback!"
 msgstr "ଆମେ ପ୍ରତିକ୍ରିୟା ଆବଶ୍ଯକ କରୁଅଛୁ!"
 
-#. Tag: primary
-#: Feedback.xml:8
+#. Tag: indexterm
 #, no-c-format
-msgid "feedback"
-msgstr "ପ୍ରତିକ୍ରିୟା"
-
-#. Tag: secondary
-#: Feedback.xml:9
-#, no-c-format
-msgid "contact information for this manual"
-msgstr "ଏହି ମେନ୍ଯୁଆଲ ପାଇଁ ଯୋଗାଯୋଗ ସୂଚନା"
+msgid "<primary>feedback</primary> <secondary>contact information for this manual</secondary>"
+msgstr ""
 
 #. Tag: para
-#: Feedback.xml:11
 #, no-c-format
-msgid ""
-"If you find a typographical error in this manual, or if you have thought of "
-"a way to make this manual better, we would love to hear from you! Please "
-"submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/"
-"bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the product "
-"<application>&PRODUCT;.</application>"
-msgstr ""
-"ଆପଣ ଏହି ମେନ୍ଯୁଆଲରେ ଗୋଟିଏ ମୂଦ୍ରଣ ଜନିତ ତୃଟି ପାଇଲେ, କିମ୍ବା ଏହାକୁ ଉନ୍ନତ କରିବା ପାଇଁ ଆପଣଙ୍କ ନିକଟରେ "
-"କୌଣସି ଉପାୟ ଥିଲେ, ଆମେ ଆପଣଙ୍କ ନିକଟରୁ ସେ ବିଷୟରେ ଶୁଣିବା ପାଇଁ ଚାହିଁବୁ! ଦୟାକରି <ulink url="
-"\"http://bugzilla.redhat.com/bugzilla/\">http://bugzilla.redhat.com/bugzilla/"
-"</ulink> କୁ ଯାଇ ବଗଜିଲାରେ <application>&PRODUCT;</application> ବିରୋଧରେ ଗୋଟିଏ ତୃଟି "
-"ବିବରଣୀ ଦିଅନ୍ତୁ।"
+msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the product <application>&PRODUCT;.</application>"
+msgstr "ଆପଣ ଏହି ମେନ୍ଯୁଆଲରେ ଗୋଟିଏ ମୂଦ୍ରଣ ଜନିତ ତୃଟି ପାଇଲେ, କିମ୍ବା ଏହାକୁ ଉନ୍ନତ କରିବା ପାଇଁ ଆପଣଙ୍କ ନିକଟରେ କୌଣସି ଉପାୟ ଥିଲେ, ଆମେ ଆପଣଙ୍କ ନିକଟରୁ ସେ ବିଷୟରେ ଶୁଣିବା ପାଇଁ ଚାହିଁବୁ! ଦୟାକରି <ulink url=\"http://bugzilla.redhat.com/bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> କୁ ଯାଇ ବଗଜିଲାରେ <application>&PRODUCT;</application> ବିରୋଧରେ ଗୋଟିଏ ତୃଟି ବିବରଣୀ ଦିଅନ୍ତୁ।"
 
 #. Tag: para
-#: Feedback.xml:14
-#, fuzzy, no-c-format
-msgid ""
-"When submitting a bug report, be sure to mention the manual&#39;s "
-"identifier: <citetitle>&BOOKID;</citetitle>"
-msgstr ""
-"ଗୋଟିଏ ତୃଟି ବିବରଣୀ ଦେବା ସମୟରେ, ମେନ୍ଯୁଆଲର ପରିଚୟକକୁ ଉଲ୍ଲେଖ କରିବା ପାଇଁ ନିଶ୍ଚିତ ହୁଅନ୍ତୁ:"
-"<citetitle>&BOOKID;</citetitle>"
+#, no-c-format
+msgid "When submitting a bug report, be sure to mention the manual's identifier: <citetitle>&BOOKID;</citetitle>"
+msgstr "ଗୋଟିଏ ତୃଟି ବିବରଣୀ ଦେବା ସମୟରେ, ମେନ୍ଯୁଆଲର ପରିଚୟକକୁ ଉଲ୍ଲେଖ କରିବା ପାଇଁ ନିଶ୍ଚିତ ହୁଅନ୍ତୁ:<citetitle>&BOOKID;</citetitle>"
 
 #. Tag: para
-#: Feedback.xml:17
 #, no-c-format
-msgid ""
-"If you have a suggestion for improving the documentation, try to be as "
-"specific as possible when describing it. If you have found an error, please "
-"include the section number and some of the surrounding text so we can find "
-"it easily."
-msgstr ""
-" ଆପଣଙ୍କ ନିକଟରେ ଦଲିଲକୁ ଉନ୍ନତ କରିବା ପାଇଁ କୌଣସି ପ୍ରସ୍ତା ଥିଲେ, ଏହାକୁ ବର୍ଣ୍ଣନା କରିବା ସମୟରେ ଯେତେ "
-"ସମ୍ଭବ ସେତେ ସ୍ପଷ୍ଟ ଭାବରେ ଏହାକୁ ବ୍ଯାଖ୍ଯା କରିବା ପାଇଁ ଚେଷ୍ଟା କରନ୍ତୁ। ଆପଣ ଗୋଟିଏ ତୃଟି ପାଇଥିଲେ, "
-"ଦୟାକରି ବିଭାଗର ସଂଖ୍ଯା ଏବଂ ତା ସହିତ ଥିବା କିଛି ପାଠ୍ଯକୁ ଅନ୍ତର୍ଭୂକ୍ତ କରନ୍ତୁ ଯେପରିକି ଆମେ ତାହାକୁ ସହଜରେ "
-"ପାଇପାରିବୁ। "
+msgid "If you have a suggestion for improving the documentation, try to be as specific as possible when describing it. If you have found an error, please include the section number and some of the surrounding text so we can find it easily."
+msgstr " ଆପଣଙ୍କ ନିକଟରେ ଦଲିଲକୁ ଉନ୍ନତ କରିବା ପାଇଁ କୌଣସି ପ୍ରସ୍ତା ଥିଲେ, ଏହାକୁ ବର୍ଣ୍ଣନା କରିବା ସମୟରେ ଯେତେ ସମ୍ଭବ ସେତେ ସ୍ପଷ୍ଟ ଭାବରେ ଏହାକୁ ବ୍ଯାଖ୍ଯା କରିବା ପାଇଁ ଚେଷ୍ଟା କରନ୍ତୁ। ଆପଣ ଗୋଟିଏ ତୃଟି ପାଇଥିଲେ, ଦୟାକରି ବିଭାଗର ସଂଖ୍ଯା ଏବଂ ତା ସହିତ ଥିବା କିଛି ପାଠ୍ଯକୁ ଅନ୍ତର୍ଭୂକ୍ତ କରନ୍ତୁ ଯେପରିକି ଆମେ ତାହାକୁ ସହଜରେ ପାଇପାରିବୁ। "
+
+#~ msgid "feedback"
+#~ msgstr "ପ୍ରତିକ୍ରିୟା"
+
+#~ msgid "contact information for this manual"
+#~ msgstr "ଏହି ମେନ୍ଯୁଆଲ ପାଇଁ ଯୋଗାଯୋଗ ସୂଚନା"
 
 #~ msgid "translator-credits"
 #~ msgstr "ଶୁଭ୍ରାଂଶୁ ବେହେରା <arya_subhransu@yahoo.co.in>"
