--- a/publican-jboss/ru-RU/Feedback.po
+++ b/publican-jboss/ru-RU/Feedback.po
@@ -1,58 +1,44 @@
+# translation of Feedback.po to Russian
+# Russian Translation.
+#
+# Alexey Vasyukov <vasyukov@vdel.com>, 2009.
+# Yulia <ypoyarko@redhat.com>, 2010.
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2008-10-14 00:06+0000\n"
-"PO-Revision-Date: 2007-04-05 09:29+1000\n"
-"Last-Translator: Automatically generated\n"
-"Language-Team: none\n"
+"POT-Creation-Date: 2010-10-08T02:39:25\n"
+"PO-Revision-Date: 2010-08-23 12:07+1000\n"
+"Last-Translator: Yulia <ypoyarko@redhat.com>\n"
+"Language-Team: Russian\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 1.11.4\n"
+"Plural-Forms:  nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 #. Tag: title
-#: Feedback.xml:6
 #, no-c-format
 msgid "We Need Feedback!"
-msgstr ""
+msgstr "Нам нужны ваши отзывы!"
 
-#. Tag: primary
-#: Feedback.xml:8
+#. Tag: indexterm
 #, no-c-format
-msgid "feedback"
-msgstr ""
-
-#. Tag: secondary
-#: Feedback.xml:9
-#, no-c-format
-msgid "contact information for this manual"
-msgstr ""
+msgid "<primary>feedback</primary> <secondary>contact information for this manual</secondary>"
+msgstr "<primary>отзывы</primary> <secondary>контактная информация</secondary>"
 
 #. Tag: para
-#: Feedback.xml:11
 #, no-c-format
-msgid ""
-"If you find a typographical error in this manual, or if you have thought of "
-"a way to make this manual better, we would love to hear from you! Please "
-"submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/"
-"bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the product "
-"<application>&PRODUCT;.</application>"
-msgstr ""
+msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the product <application>&PRODUCT;.</application>"
+msgstr "Если вы нашли опечатку в этом руководстве или у вас есть предложения по его усовершенствованию, мы хотели бы об этом узнать. Создайте запрос в Bugzilla по адресу <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink>, выбрав компонент <application>&PRODUCT;.</application>"
 
 #. Tag: para
-#: Feedback.xml:14
 #, no-c-format
-msgid ""
-"When submitting a bug report, be sure to mention the manual&#39;s "
-"identifier: <citetitle>&BOOKID;</citetitle>"
-msgstr ""
+msgid "When submitting a bug report, be sure to mention the manual's identifier: <citetitle>&BOOKID;</citetitle>"
+msgstr "Не забудьте указать в запросе идентификатор данного руководства: <citetitle>&BOOKID;</citetitle>."
 
 #. Tag: para
-#: Feedback.xml:17
 #, no-c-format
-msgid ""
-"If you have a suggestion for improving the documentation, try to be as "
-"specific as possible when describing it. If you have found an error, please "
-"include the section number and some of the surrounding text so we can find "
-"it easily."
-msgstr ""
+msgid "If you have a suggestion for improving the documentation, try to be as specific as possible when describing it. If you have found an error, please include the section number and some of the surrounding text so we can find it easily."
+msgstr "Если у вас есть предложения по улучшению этого руководства, постарайтесь описать их как можно подробнее. Если же вы нашли ошибку, пожалуйста, укажите номер раздела и окружающий текст для облегчения ее идентификации."
