--- a/publican-jboss/ta-IN/Feedback.po
+++ b/publican-jboss/ta-IN/Feedback.po
@@ -5,10 +5,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2008-10-14 00:06+0000\n"
+"POT-Creation-Date: 2010-10-08T02:39:25\n"
 "PO-Revision-Date: 2007-10-29 16:50+0530\n"
 "Last-Translator: I. Felix <ifelix@redhat.com>\n"
 "Language-Team: Tamil <fedora-trans-ta@redhat.com>\n"
+"Language: ta\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -18,61 +19,35 @@ msgstr ""
 "\n"
 
 #. Tag: title
-#: Feedback.xml:6
 #, no-c-format
 msgid "We Need Feedback!"
 msgstr "உங்கள் கருத்துக்களை தெரிவிக்கவும்!"
 
-#. Tag: primary
-#: Feedback.xml:8
+#. Tag: indexterm
 #, no-c-format
-msgid "feedback"
-msgstr "கருத்துக்கள்"
-
-#. Tag: secondary
-#: Feedback.xml:9
-#, no-c-format
-msgid "contact information for this manual"
-msgstr "இந்த கையேட்டின் தொடர்பு தகவல்"
+msgid "<primary>feedback</primary> <secondary>contact information for this manual</secondary>"
+msgstr ""
 
 #. Tag: para
-#: Feedback.xml:11
 #, no-c-format
-msgid ""
-"If you find a typographical error in this manual, or if you have thought of "
-"a way to make this manual better, we would love to hear from you! Please "
-"submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/"
-"bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the product "
-"<application>&PRODUCT;.</application>"
-msgstr ""
-"நீங்கள் இந்த கையேட்டில் பிழைகளை பார்த்தால் அல்லது இந்த கையேட்டை மேலும் மெருகேற்ற நினைத்தால், "
-"நாங்கள் உங்களிடமிருந்து கருத்து கேட்க தயாராக இருக்கிறோம். அவ்வாறு இருந்தால் உங்கள் "
-"அறிக்கையை பக்ஸில்லாவில்: <ulink url=\"http://bugzilla.redhat.com/bugzilla/"
-"\">http://bugzilla.redhat.com/bugzilla/</ulink> இந்த "
-"தயாரிப்பில்<application>&PRODUCT;.</application> சமர்ப்பிக்கவும்"
+msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the product <application>&PRODUCT;.</application>"
+msgstr "நீங்கள் இந்த கையேட்டில் பிழைகளை பார்த்தால் அல்லது இந்த கையேட்டை மேலும் மெருகேற்ற நினைத்தால், நாங்கள் உங்களிடமிருந்து கருத்து கேட்க தயாராக இருக்கிறோம். அவ்வாறு இருந்தால் உங்கள் அறிக்கையை பக்ஸில்லாவில்: <ulink url=\"http://bugzilla.redhat.com/bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> இந்த தயாரிப்பில்<application>&PRODUCT;.</application> சமர்ப்பிக்கவும்"
 
 #. Tag: para
-#: Feedback.xml:14
-#, fuzzy, no-c-format
-msgid ""
-"When submitting a bug report, be sure to mention the manual&#39;s "
-"identifier: <citetitle>&BOOKID;</citetitle>"
-msgstr ""
-"ஒரு பிழை அறிக்கையை சமர்ப்பிக்கும் போது கையேடு அடையாளப்படுத்தியை குறிப்பிடவும்: "
-"<citetitle>&BOOKID;</citetitle>"
+#, no-c-format
+msgid "When submitting a bug report, be sure to mention the manual's identifier: <citetitle>&BOOKID;</citetitle>"
+msgstr "ஒரு பிழை அறிக்கையை சமர்ப்பிக்கும் போது கையேடு அடையாளப்படுத்தியை குறிப்பிடவும்: <citetitle>&BOOKID;</citetitle>"
 
 #. Tag: para
-#: Feedback.xml:17
 #, no-c-format
-msgid ""
-"If you have a suggestion for improving the documentation, try to be as "
-"specific as possible when describing it. If you have found an error, please "
-"include the section number and some of the surrounding text so we can find "
-"it easily."
-msgstr ""
-"இந்த ஆவணமாக்கத்தை மேம்படுத்த நீங்கள் கருத்து வைத்திருந்தால், அவற்றை குறிப்பிடும் போது "
-"குறிப்பிட்டு சொல்ல முயற்சிக்கவும். ஒரு பிழையை கண்டால், அவற்றின் பிரிவு எண் மற்றும் "
-"அருகிலுள்ள உரை போன்றவற்றை குறிப்பிட்டால் அவற்றை எளிதாக கண்டுபிடிக்க முடியும்."
+msgid "If you have a suggestion for improving the documentation, try to be as specific as possible when describing it. If you have found an error, please include the section number and some of the surrounding text so we can find it easily."
+msgstr "இந்த ஆவணமாக்கத்தை மேம்படுத்த நீங்கள் கருத்து வைத்திருந்தால், அவற்றை குறிப்பிடும் போது குறிப்பிட்டு சொல்ல முயற்சிக்கவும். ஒரு பிழையை கண்டால், அவற்றின் பிரிவு எண் மற்றும் அருகிலுள்ள உரை போன்றவற்றை குறிப்பிட்டால் அவற்றை எளிதாக கண்டுபிடிக்க முடியும்."
+
+#~ msgid "feedback"
+#~ msgstr "கருத்துக்கள்"
+
+#~ msgid "contact information for this manual"
+#~ msgstr "இந்த கையேட்டின் தொடர்பு தகவல்"
 
 #~ msgid "translator-credits"
 #~ msgstr "I. Felix <ifelix@redhat> 2007"
